--- a/_posts/2022-04-14-0411-0417.md
+++ b/_posts/2022-04-14-0411-0417.md
@@ -302,3 +302,147 @@ ref를 만드는 또 다른 방법은 createRef 함수를 사용하는 것이다
 ref를 컴포넌트끼리 데이터를 교류할 때 사용해서는 안 된다.  
 이는 잘못된 것으로 리액트 사상에 어긋난 설계이다.  
 컴포넌트끼리 데이터를 교류할 때는 언제나 부모, 자식 흐름으로 교류해야 한다.
+
+<br />
+<br />
+<br />
+
+## 0414
+
+# 라이프사이클 메서드
+
+모든 리액트 컴포넌트에는 라이프사이클이 존재한다.  
+컴포넌트 수명은 페이지에 렌더링되기 전인 준비 과정에서 시작하여 페이지에서 사라질 때 끝난다.  
+라이프사이클 메서드를 이용해 컴포넌트 초기 렌더링 시, 작업을 처리하거나 컴포넌트를 업데이트하기 전후로 어떤 작업을 처리하거나, 불필요한 업데이트를 방지할 수 있다.  
+라이프사이클 메서드는 클래스 컴포넌트에서만 사용할 수 있다.
+
+라이프사이클은 총 세 가지, 즉 마운트, 업데이트, 언마운트 카테고리로 나눈다.  
+DOM이 생성되고 웹 브라우저상에 나타나는 것을 마운트라고 한다.
+
+### render() 함수
+
+```javascript
+render() { ... }
+```
+
+- 라이프사이클 메서드 중 유일한 필수 메서드이다.
+- 이 메서드 안에서 this.props와 this.state에 접근할 수 있으며, 리액트 요소를 반환한다.
+- 아무것도 보여 주고 싶지 않다면 null 값이나 false 값을 반환하도록 한다.
+- 이 메서드 안에서 이벤트 설정이 아닌 곳에서 setState를 사용하면 안 되며, 브라우저의 DOM에 접근해서도 안 된다.
+
+### constructor 메서드
+
+```javascript
+constructor(props) { ... }
+```
+
+- 이것은 컴포넌트의 생성자 메서드로 컴포넌트를 만들 때 처음으로 실행된다.
+- 이 메서드에서는 초기 state를 정할 수 있다.
+
+### getDerivedStateFromProps 메서드
+
+```javascript
+static getDerivedStateFromProps(nextProps, prevState) {
+  if (nextProps.value !== prevState.value) {
+    return { value: nextProps.value };
+  }
+  return null;  // state를 변경할 필요가 없다면 null 반환
+}
+```
+
+- props로 받아 온 값을 state에 동기화시키는 용도로 사용하며, 컴포넌트가 마운트될 때와 업데이트될 때 호출된다.
+
+### componentDidMount 메서드
+
+```javascript
+componentDidMount() {}
+```
+
+- 컴포넌트를 만들고, 첫 렌더링을 다 마친 후 실행한다.
+- 이 안에서 다른 자바스크립트 라이브러리 또는 프레임워크의 함수를 호출하거나 이벤트 등록, setTimeout, setInterval, 네트워크 요청 같은 비동기 작업을 처리하면 된다.
+
+### shouldComponentUpdate 메서드
+
+```javascript
+shouldComponentUpdate(nextProps, nextState) {}
+```
+
+- 이것은 props 또는 state를 변경했을 때, 리렌더링을 시작할지 여부를 지정하는 메서드이다.
+- 메서드 안에서 반드시 true나 false를 반환해야 하고, 기본값은 true이다.
+- 이 메서드가 false를 반환하면 업데이트 과정은 종료된다.
+- 프로젝트 성능을 최적화할 때, 이 메서드를 사용할 수 있다.
+
+### getSnapshotBeforeUpdate 메서드
+
+```javascript
+getSnapshotBeforeUpdate(prevProps, prevState) {
+  if (prevState.array !== this.state.array) {
+    const { scrollTop, scrollHeight } = this.list;
+    return { scrollTop, scrollHeight };
+  }
+}
+```
+
+- render에서 만들어진 결과물이 브라우저에 실제로 반영되기 직전에 호출된다.
+- 이 메서드에서 반환하는 값은 componentDidUpdate에서 세 번째 파라미터인 snapshot 값으로 전달받을 수 있는데, 주로 업데이트하기 직전의 값을 참고할 일이 있을 때 활용한다.
+- UI 업데이트 반영이 매끄럽지 않은 경우 사용한다. ex) 스크롤바 위치 유지
+
+### componentDidUpdate 메서드
+
+```javascript
+componentDidUpdate(prevProps, prevState, snanshot) {}
+```
+
+- prevProps 또는 prevState를 사용하여 컴포넌트가 이전에 가졌던 데이터에 접근할 수 있다.
+- getSnapshotBeforeUpdate에서 반환한 값이 있다면 여기서 snapshot 값을 전달받을 수 있다.
+
+### componentWillUnmount 메서드
+
+```javascript
+componentWillUnmount() {}
+```
+
+- 컴포넌트를 DOM에서 제거할 때 실행한다.
+- componentDidMount에서 등록한 이벤트, 타이머, 직접 생성한 DOM이 있다면 여기서 제거 작업을 해야 한다.
+
+### componentDidCatch 메서드
+
+```javascript
+componentDidCatch(error, info) {
+  this.setState({
+    error: true,
+  });
+  console.log({ error, info });
+}
+```
+
+- 컴포넌트 렌더링 도중 에러가 발생했을 때 애플리케이션이 먹통이 되지 않고 오류 UI를 보여줄 수 있게 한다.
+- error는 파라미터에 어떤 에러가 발생했는지 알려 주며, info 파라미터는 어디에 있는 코드에서 오류가 발생했는지에 대한 정보를 준다.
+- 이 메서드를 사용할 때는 컴포넌트 자신에게 발생하는 에러를 잡아낼 수 없고, 자신의 this.props.children으로 전달되는 컴포넌트에서 발생하는 에러만 잡아낼 수 있다.
+- 그러나 공식문서에 대체 UI 렌더링 제어를 하려면 `static getDerivedStateFromError()`를 대신 사용하고, componentDidCatch는 오류 로그 기록 등을 위해 사용하면 된다고 한다.
+
+## ErrorBoundary 예시
+
+```javascript
+class ErrorBoundary extends React.Component {
+  state = { hasError: false };
+
+  static getDerivedStateFromError(error) {
+    return { hasError: true };
+  }
+
+  componentDidCatch(error, info) {
+    logComponentStackToMyService(info.componentStack);
+  }
+
+  render() {
+    if (this.state.hasError) {
+      return <h1>Something went wrong.</h1>;
+    }
+
+    return this.props.children;
+  }
+}
+
+export default ErrorBoundary;
+```
