--- a/_posts/2022-04-14-0411-0417.md
+++ b/_posts/2022-04-14-0411-0417.md
@@ -152,7 +152,7 @@ const CountContainer = ({ count, onIncrement, onDecrement, ...restProps }) => {
 
 React.memo는 고차 컴포넌트이다.  
 React.memo를 사용하면 컴포넌트의 props가 변경되지 않는 이상 기억된 컴포넌트를 사용하게 된다.  
-호출하고 결과를 메모이징하도록 래핑하여 경우에 따라 성능 향상을 누릴 수 있다.  
+호출하고 결과를 메모제이션하도록 래핑하여 경우에 따라 성능 향상을 누릴 수 있다.  
 즉, 컴포넌트가 필요한 경우에만 렌더링하게 되고, 그 외에는 렌더링 자체를 발생시키지 않는다.
 
 이 메서드는 오직 성능 최적화를 위해서 사용해야 한다. 렌더링을 방지하기 위해서 사용하면 안 된다.
