--- a/_posts/2022-04-25-0418-0424.md
+++ b/_posts/2022-04-25-0418-0424.md
@@ -211,3 +211,147 @@ CONNECT라 불리는 새로운 확장 메서드를 이용해서 프락시에게 
 <br />
 <br />
 <br />
+
+## 0419
+
+# 컴포넌트 성능 최적화
+
+많은 데이터를 렌더링 할 경우 애플리케이션이 느려지는 것을 체감할 수 있을 정도로 지연이 발생할 수 있다.
+
+## 크롬 개발자 도구를 통한 성능 모니터링
+
+성능을 분석해야 할 때는 느려졌다는 느낌만으로 충분하지 않다.  
+정확히 몇 초가 걸리는지 확인해야 하는데, React DevTools를 사용하여 측정하면 된다.  
+Profiler 탭에서 녹화하고 동작을 수행하여 성능 분석 결과를 확인할 수 있다.  
+여기서 Render duration은 리렌더링에 소요된 시간을 의미한다.
+
+### 리액트 컴포넌트가 느려지는 원인
+
+컴포넌트는 다음과 같은 상황에서 리렌더링이 발생한다.
+
+1. 자신이 전달받은 props가 변경될 때
+2. 자신의 state가 바뀔 때
+3. 부모 컴포넌트가 리렌더링될 때
+4. forceUpdate 함수가 실행될 때
+
+예를 들어, 부모 컴포넌트에서 가지고 있는 상태 배열에서 하나의 값이 변경되었을 때, 자식 컴포넌트 중 값이 변경된 컴포넌트만 다시 리렌더링되면 되는 경우에도 부모 컴포넌트가 리렌더링되었읜 모두 리렌더링된다.
+컴포넌트의 개수가 많지 않다면 모든 컴포넌트를 리렌더링해도 느려지지 않는데, 2000개가 넘어가면 성능이 저하된다.  
+이럴 때는 컴포넌트 리렌더링 성능을 최적화해 주는 작업을 해 주어야 한다.
+
+## React.memo를 사용하여 컴포넌트 성능 최적화
+
+컴포넌트의 리렌더링을 방지할 때는 shouldComponentUpdate라는 라이프사이클을 사용하면 된다.  
+그런데 함수 컴포넌트에서는 라이프사이클 메서드를 사용할 수 없다.  
+그 대신 React.memo라는 함수를 사용한다. 컴포넌트의 props가 바뀌지 않았다면, 리렌더링하지 않도록 설정하여 함수 컴포넌트의 리렌더링 성능을 최적화해 줄 수 있다.
+
+React.memo를 사용하는 것만으로 컴포넌트 최적화가 끝나지는 않는다.  
+useCallback으로 감싼 함수에서 상태에 의존하는 경우, 상태가 변경되면 함수도 새롭게 바뀌기 때문이다.  
+이렇게 함수가 계속 만들어지는 상황을 방지하는 방법은 두 가지이다.
+
+1. useState의 함수형 업데이트 기능 사용
+2. useReducer 사용
+
+### useState의 함수형 업데이트
+
+set.. 함수를 사용할 때 새로운 상태를 파라미터로 넣어 주는 대신, 상태 업데이트를 어떻게 할지 정의해 주는 업데이트 함수를 넣는다. 이를 함수형 업데이트라고 부른다.
+
+```javascript
+const [number, setNumber] = useState(0);
+const onIncrease = useCallback(
+  () => setNumber((prevNumber) => prevNumber + 1),
+  []
+);
+```
+
+위 코드처럼 새로운 상태를 파라미터로 넣어 주는 것이 아니라, 어떻게 업데이트할지 정의해 주는 업데이트 함수를 넣어 주면 useCallback을 사용할 때 두 번째 파라미터로 넣는 배열에 number를 넣지 않아도 된다.  
+그렇기에 상태가 변경되어도 함수가 새로 생성되지 않는다.
+
+### useReducer 사용
+
+useState의 함수형 업데이트를 사용하는 대신, useReducer를 사용해도 함수가 계속 새로워지는 문제를 해결할 수 있다.  
+useReducer를 사용할 때는 원래 두 번째 파라미터에 초기 상태를 넣어 주어야 한다. 하지만 초기 상태로 함수를 전달할 경우 두 번째 인수에 undefined를 넣고, 세 번째 파라미터에 함수를 넣어 준다. 이렇게 하면 컴포넌트가 맨 처음 렌더링될 때만 함수가 호출된다.
+
+## 리액트 불변성
+
+리액트 컴포넌트에서 상태를 업데이트할 때 불변성을 지키는 것은 매우 중요하다.  
+기존의 값을 직접 수정하지 않으면서 새로운 값을 만들어 내는 것을 불변성을 지킨다고 한다.  
+불변성이 지켜지지 않으면 객체 내부의 값이 새로워져도 바뀐 것을 감지하지 못한다.  
+그렇다면 예를 들어 React.memo에서 서로 비교하여 최적화하는 것이 불가능하다.
+
+만약 객체 안에 있는 객체 혹은 배열이라면 불변성을 지키면서 새 값을 할당하기가 쉽지 않다.  
+구조가 정말 복잡해진다면 이렇게 불변성을 유지하면서 업데이트하는 것도 까다로워지는데, 복잡한 상황일 경우 immer 라이브러리의 도움을 받아 편하게 작업할 수 있다.
+
+## 리스트 컴포넌트 최적화하기
+
+리스트 관련 컴포넌트를 작성할 때는 리스트 아이템과 리스트, 이 두 가지 컴포넌트를 최적화해주어야 한다.  
+그러나 내부 데이터가 100개를 넘지 않거나 업데이트가 자주 발생하지 않는다면, 이런 최적화 작업을 반드시 해 줄 필요는 없다.
+
+## react-virtualized를 사용한 렌더링 최적화
+
+리스트의 데이터가 2500개 등록되어 있는데, 실제 화면에 나오는 항목은 아홉 개뿐인 경우, 2491개 컴포넌트는 스크롤하기 전에는 보이지 않음에도 불구하고 렌더링이 이루어진다. 이는 비효율적이다.
+
+react-virtualized를 사용하면 리스트 컴포넌트에서 스크롤되기 전에 보이지 않는 컴포넌트는 렌더링하지 않고 크기만 차지하게끔 할 수 있다.  
+만약 스크롤되면 해당 스크롤 위치에서 보여 주어야 할 컴포넌트를 자연스럽게 렌더링시킨다.  
+이 라이브러리를 사용하면 낭비되는 자원을 아주 쉽게 아낄 수 있다.
+
+```jsx
+import { memo, useCallback } from "react";
+import { List } from "react-virtualized";
+import TodoListItem from "./TodoListItem";
+import "./TodoList.scss";
+
+const TodoList = ({ todos, onRemove, onToggle }) => {
+  const rowRenderer = useCallback(
+    ({ index, key, style }) => {
+      const todo = todos[index];
+      return (
+        <TodoListItem
+          todo={todo}
+          key={key}
+          onRemove={onRemove}
+          onToggle={onToggle}
+          style={style}
+        />
+      );
+    },
+    [onRemove, onToggle, todos]
+  );
+  return (
+    <List
+      className="TodoList"
+      width={512}
+      height={513}
+      rowCount={todos.length}
+      rowHeight={57}
+      rowRenderer={rowRenderer}
+      list={todos}
+      style={ outline: "none" }
+    />
+  );
+};
+
+export default memo(TodoList);
+```
+
+- 최적화를 수행하기 전에, 각 항목의 실제 크기를 px 단위로 알아내야 한다.
+- List 컴포넌트를 사용하기 위해 함수를 새로 작성한다. 이 함수는 react-virtualized의 List 컴포넌트에서 각 아이템을 렌더링할 때 사용하며, 이 함수를 List 컴포넌트의 props로 설정해 주어야 한다.
+- 이 함수는 파라미터에 index, key, style 값을 객체 타입으로 받아 와서 사용한다.
+- List 컴포넌트를 사용할 때는 해당 리스트의 전체 크기와 각 항목의 높이, 각 항목을 렌더링할 때 사용해야 하는 함수, 그리고 배열을 props로 넣어줘야 한다.
+
+# immer
+
+immer 라이브러리를 사용하면, 구조가 복잡한 객체도 매우 쉽고 짧은 코드를 사용하여 불변성을 유지하면서 업데이트해 줄 수 있다.
+
+```jsx
+import produce from "immer";
+const nextState = produce(originalState, (draft) => {
+  draft.somewhere.deep.inside = 5;
+});
+```
+
+- produce 함수는 두 가지 파라미터를 받는다. 첫 번째 파라미터는 수정하고 싶은 상태이고, 두 번째 파라미터는 상태를 어떻게 업데이트할지 정의하는 함수이다.
+- 두 번째 파라미터로 전달되는 함수 내부에서 원하는 값을 변경하면, produce 함수가 불변성 유지를 대신해 주면서 새로운 상태를 생성해 준다.
+- 이 라이브러리의 핵심은 '불변성에 신경 쓰지 않는 것처럼 코드를 작성하되 불변성 관리는 제대로 해 주는 것'
+- immer를 사용하여 컴포넌트 상태를 작성할 때는 객체 안에 있는 값을 직접 수정하거나, 배열에 직접적인 변화를 일으키는 함수를 사용해도 무방하다.
+- 하지만 immer를 사용한다고 해서 무조건 코드가 간결해지지는 않기 때문에, 코드가 복잡할 때만 사용해도 충분하다.
+- produce 함수를 호출할 때, 첫 번째 파라미터가 함수 형태라면 업데이트 함수를 반환한다. 이러한 속성과 useState의 함수형 업데이트를 함께 활용하면 코드를 더욱 깔끔하게 만들 수 있다.
