--- a/_posts/2022-04-25-0418-0424.md
+++ b/_posts/2022-04-25-0418-0424.md
@@ -355,3 +355,196 @@ const nextState = produce(originalState, (draft) => {
 - immer를 사용하여 컴포넌트 상태를 작성할 때는 객체 안에 있는 값을 직접 수정하거나, 배열에 직접적인 변화를 일으키는 함수를 사용해도 무방하다.
 - 하지만 immer를 사용한다고 해서 무조건 코드가 간결해지지는 않기 때문에, 코드가 복잡할 때만 사용해도 충분하다.
 - produce 함수를 호출할 때, 첫 번째 파라미터가 함수 형태라면 업데이트 함수를 반환한다. 이러한 속성과 useState의 함수형 업데이트를 함께 활용하면 코드를 더욱 깔끔하게 만들 수 있다.
+
+<br />
+<br />
+<br />
+
+## 0420
+
+# 엔터티와 인코딩
+
+HTTP는 다음을 보장한다.
+
+- 객체는 올바르게 식별되므로(Content-Type 미디어 포맷과 Content-Language 헤더를 이용해서) 브라우저나 다른 클라이언트는 콘텐츠를 바르게 처리할 수 있다.
+- 객체는 올바르게 압축이 풀릴 것이다.(Content-Length와 Content-Encoding 헤더를 이용해서)
+- 객체는 항상 최신이다(엔터티 검사기와 캐시 만료 제어를 이용해서)
+- 사용자는 요구를 만족할 것이다(내용 협상을 위한 Accept 관련 헤더들에 기반해서)
+- 네트워크 사이를 빠르고 효율적으로 이동할 것이다(범위 요청, 델타 인코딩, 그 외의 데이터 압축을 이용해서)
+- 조작되지 않고 온전하게 도착할 것이다(전송 인코딩 헤더와 체크섬을 이용해서)
+
+이 모든 것을 가능하게 하기 위해, HTTP는 콘텐츠를 나르기 위한 잘 라벨링된 엔터티를 사용한다.  
+HTTP 메시지를 인터넷 운송 시스템의 컨테이너라고 생각한다면, HTTP 엔터티는 메시지의 실질적인 화물이다.  
+엔터티 본문은 가공되지 않은 데이터만을 담고 있기에, 엔터티 헤더는 그 데이터의 의미에 대해 설명할 필요가 있다.
+
+## Content-Length: 엔터티의 길이
+
+Content-Length 헤더는 메시지의 엔터티 본문의 크기를 바이트 단위로 나타낸다.  
+어떻게 인코딩 되었든 상관없이 크기를 표현할 수 있다.  
+Content-Length 헤더는 메시지를 청크 인코딩으로 전송하지 않는 이상, 엔터티 본문을 포함한 메시지에서는 필수적으로 있어야 한다.  
+서버 충돌로 인해 메시지가 잘렸는지 감지하고자 할 때와 지속 커넥션을 공유하는 메시지를 올바르게 분할하고자 할 때 필요하다.
+
+### 잘림 검출
+
+Content-Length가 없다면 클라이언트는 커넥션이 정상적으로 닫힌 것인지 메시지 전송 중에 서버에 충돌이 발생한 것인지 구분하지 못한다.  
+메시지 잘림은 캐싱 프락시 서버에서 특히 취약하다. 만약 캐시가 잘린 메시지를 수신했으나 잘렸다는 것을 인식하지 못했다면, 캐시는 결함이 있는 콘텐츠를 저장하고 계속해서 제공하게 될 것이다.
+
+### 잘못된 Content-Length
+
+Content-Length가 잘못된 값을 담고 있을 경우 아예 빠진 것보다도 큰 피해를 유발할 수 있다.  
+초창기 클라이언트들과 서버들 중 일부는 Content-Length의 계산과 관련된 버그들을 가지고 있기 때문에, 오동작을 했는지 탐지하고 교정을 시도한다.
+
+### Content-Length와 지속 커넥션
+
+Content-Length는 지속 커넥션을 하기 위해 필수다.  
+Content-Length 헤더는 클라이언트에게 메시지 하나가 어디서 끝나고 다음 시작은 어디인지 알려준다.  
+커넥션이 지속적이기 때문에, 클라이언트가 커넥션이 닫힌 위치를 근거로 메시지의 끝을 인식하는 것은 불가능하다.
+
+다만 청크 인코딩을 사용할 때는 Content-Length 헤더 없는 지속 커넥션이 가능하다.
+
+### 콘텐츠 인코딩
+
+HTTP는 보안을 강화하거나 압축을 통해 공간을 절약할 수 있도록, 엔터티 본문을 인코딩할 수 있게 해준다.  
+만약 본문의 콘텐츠가 인코딩되어 있다면, Content-Length 헤더는 인코딩된 본문의 길이를 바이트 단위로 정의한다.
+
+### 엔터티 본문 길이 판별을 위한 규칙
+
+1. 본문을 갖는 것이 허용되지 않는 HTTP 메시지에는, 본문 계산을 위한 Content-Length 헤더가 무시된다.
+2. 메시지가 Transfer-Encoding 헤더를 포함하고 있다면, 메시지가 커넥션이 닫혀서 먼저 끝나지 않는 이상 엔터티는 0바이트 청크라 불리는 특별한 패턴으로 끝나야 한다.
+3. Content-Length 헤더를 갖는다면 본문의 길이를 담게 된다.
+4. 메시지가 'multipart/byteranges' 미디어 타입을 사용하고 엔터티 길이가 별도로 정의되지 않았다면, 멀티파트 메시지의 각 부분은 각자 스스로의 크기를 정의할 것이다. 이 멀티파트 유형은 스스로 크기를 결정할 수 있는 유일한 엔터티 본문 유형이다.
+5. 위의 어떤 규칙에도 해당되지 않는다면, 엔터티는 커넥션이 닫힐 때 끝난다.
+
+## 엔터티 요약
+
+엔터티 본문 데이터에 대한 의도하지 않은 변경을 감지하기 위해, 최초 엔터티가 생성될 때 송신자는 데이터에 대한 체크섬을 생성할 수 있으며, 수신자는 의도하지 않은 엔터티의 변경을 잡아내기 위해 그 체크섬으로 기본적인 검사를 할 수 있다.
+
+Content-MD5 헤더는 서버가 엔터티 본문에 MD5 알고리즘을 적용한 결과를 보내기 위해 사용된다.  
+응답을 처음 만든 서버만이 Content-MD5 헤더를 계산해서 보내고, 중간에 있는 프락시와 캐시는 그 헤더를 변경하거나 추가하지 않는다.
+
+## 미디어 타입과 차셋(Charset)
+
+Content-Type 헤더 필드는 엔터티 본문의 MIME 타입을 기술한다.  
+MIME 타입은 전달되는 데이터 매체의 기저 형식의 표준화된 이름이다.
+
+### 텍스트 매체를 위한 문자 인코딩
+
+charset 매개변수를 지원해 더 자세한 내용 유형을 지정할 수 있다.
+
+### 멀티파트 미디어 타입
+
+MIME 멀티파트 이메일 메시지는 서로 붙어있는 여러 개의 메시지를 포함하며, 하나의 복합 메시지로 보내진다.  
+HTTP는 멀티파트 본문도 지원한다. 그러나 일반적으로는 폼을 채워서 제출할 때와 문서의 일부분을 실어 나르는 범위 응답을 할 때의 두 가지 경우에만 사용된다.
+
+### 멀티파트 폼 제출
+
+HTTP 폼을 채워서 제출하면, 가변 길이 텍스트 필드와 업로드 될 객체는 각각이 멀티파트 본문을 구성하는 하나의 파트가 되어 보내진다.  
+멀티파트 본문은 여러 다른 종류와 길이의 값으로 채워진 폼을 허용한다.
+
+### 멀티파트 범위 응답
+
+범위 요청에 대한 HTTP 응답 또한 멀티파트가 될 수도 있다.
+
+## 콘텐츠 인코딩
+
+### 콘텐츠 인코딩 과정
+
+1. 웹 서버가 원본 Content-Type과 Content-Length 헤더를 수반한 원본 응답 메시지를 생성한다.
+2. 콘텐츠 인코딩 서버가 인코딩 메시지를 생성한다. 콘텐츠 인코딩 서버는 Content-Encoding 헤더를 추가하여, 수신 측 애플리케이션이 그것을 디코딩할 수 있도록 한다.
+3. 수신 측 프로그램은 인코딩된 메시지를 받아서 디코딩하고 원본을 얻는다.
+
+### 콘텐츠 인코딩 유형
+
+gzip 인코딩은 전송되는 메시지의 크기를 정보의 손실 없이 줄이기 위한 무손실 압축 알고리즘이다. gzip은 일반적으로 가장 효율적이고 가장 널리 쓰이는 압축 알고리즘이다.
+
+### Accept-Encoding 헤더
+
+서버에서 클라이언트가 지원하지 않는 인코딩을 사용하는 것을 막기 위해, 클라이언트는 자신이 지원하는 인코딩의 목록을 Accept-Encoding 요청 헤더를 통해 전달한다.  
+만약 이것이 포함되지 않았다면, 서버는 클라이언트가 어떤 인코딩이든 받아들일 수 있는 것으로 간주한다.
+
+클라이언트는 각 인코딩에 Q 값을 매개변수로 더해 선호도를 나타낼 수 있다.  
+1.0에 가까울수록 인코딩을 원한다는 뜻이다.
+
+## 전송 인코딩과 청크 인코딩
+
+메시지 데이터가 네트워크를 통해 전송되는 방법을 바꾸기 위해 전송 인코딩을 메시지에 적용할 수 있다.
+
+### 안전한 전송
+
+HTTP에서 전송된 메시지의 본문이 문제를 일으킬 수 있는 경우는 몇 가지 밖에 없다.
+
+**알 수 없는 크기**  
+몇몇 콘텐츠 인코더는 콘텐츠를 먼저 생성하지 않고서는 메시지 본문의 최종 크기를 판단할 수 없다.  
+이 서버들은 그 사이즈를 알기 전에 데이터의 전송을 시작하려고 한다.  
+HTTP는 데이터에 앞서 Content-Length를 요구하기 때문에, 몇몇 서버는 종결 꼬리말을 포함시켜 전송 인코딩으로 데이터를 보내려 시도한다.
+
+**보안**  
+SSL과 같은 유명 전송 계층 보안 방식이 있기 때문에 전송 인코딩 보안은 흔하지 않다.
+
+### 청크 인코딩
+
+청크 인코딩은 메시지를 일정 크기의 청크 여럿으로 쪼갠다.  
+청크 인코딩을 이용하면메시지를 보내기 전에 전체 크기를 알 필요가 없어진다.  
+본문이 동적으로 생성됨에 따라, 서버는 그중 일부를 버퍼에 담은 뒤 그 청크를 그것의 크기와 함께 보낼 수 있다.
+
+지속 커넥션에서는 본문을 쓰기 전에 반드시 Content-Length 헤더에 본문의 길이를 담아서 보내줘야 한다. 콘텐츠가 서버에서 동적으로 생성되는 경우에는, 보내기 전에 본문의 길이를 알아내는 것이 불가능할 것이다.  
+청크 인코딩은 동적으로 본문이 생성되면서, 서버는 그중 일부를 버퍼에 담은 뒤 그 한덩어리를 그의 크기와 함께 보낼 수 있다.  
+본문을 모두 보내면 크기가 0인 청크로 본문이 끝났음을 알리고 다음 응답을 위해 커넥션을 열린 채로 유지할 수 있다.
+
+### 콘텐츠와 전송 인코딩의 조합
+
+콘텐츠 인코딩과 전송 인코딩은 동시에 사용될 수 있다.  
+콘텐츠 인코딩 -> 전송 인코딩 순으로 전송된다.
+
+### 전송 인코딩 규칙
+
+- 전송 인코딩의 집합은 반드시 'chunked'를 포함해야 한다. 유일한 예외는 메시지가 커넥션의 종료로 끝나는 경우 뿐이다.
+- 청크 전송 인코딩이 사용되었다면, 메시지 본문에 적용된 마지막 전송 인코딩이 존재해야 한다.
+- 청크 전송 인코딩은 반드시 메시지 본문에 한 번 이상 적용되어야 한다.
+
+## 시간에 따라 바뀌는 인스턴스
+
+웹 객체는 정적이지 않고 시간에 따라 다른 버전의 객체를 가리킬 수 있다.  
+HTTP 프로토콜은 어떤 특정한 종류의 요청이나 응답을 다루는 방법들을 정의하는데, 이것은 인스턴스 조작이라 불리며 객체의 인스턴스에 작용한다.
+
+이들 중 대표적인 두 가지가 범위 요청과 델타 인코딩이다. 이 둘 모두가, 클라이언트가 자신이 갖고 있는 리소스의 사본이 서버가 갖고 있는 것과 정확히 같은지 판단하고, 상황에 따라서는 새 인스턴스를 요청할 수 있는 능력을 가질 것을 요구한다.
+
+## 검사기와 신선도
+
+### 신선도
+
+서버는 클라이언트에게 얼마나 오랫동안 콘텐츠를 캐시하고 그것이 신선하다고 가정할 수 있는지에 대한 정보를 줄 것이다.  
+서버는 Expires나 Cache-Control 헤더를 통해 이러한 정보를 제공할 수 있다.
+
+Expires는 만료일을 지정한다. Cache-Control 헤더는 문서의 최대 수명을 문서가 서버를 떠난 후로부터의 총 시간을 초 단위로 정한다.
+
+### 조건부 요청과 검사기
+
+HTTP는 클라이언트에게 리소스가 바뀐 경우에만 사본을 요청하는 조건부 요청이라 불리는 특별한 요청을 할 수 있는 방법을 제공한다.  
+조건부 요청은 평범한 요청 메시지이지만, 특정 조건이 참일 때만 수행된다.  
+조건부 요청은 'If-' 로 시작하는 조건부 헤더에 의해 구현된다.
+
+각 조건부 요청은 특정 검사기 위에서 동작한다. 검사기는 문서의 테스트된 특정 속성이다.  
+일련번호나 버전 번호 혹은 문서의 최종 변경일과 같은 검사기를 생각해볼 수 있다.  
+Last-Modified와 ETag는 HTTP에 의해 사용되는 두 개의 주요한 검사기다.
+
+HTTP는 검사기를 약한 검사기와 강한 검사기 두 가지로 분류한다.
+
+약한 검사기는 리소스의 인스턴스를 고유하게 식별하지 못하는 경우도 있다.  
+ex) 객체의 바이트 단위 크기, 최종 변경 시각
+
+강한 검사기는 언제나 고유하게 식별한다.  
+ex) 암호 체크섬, ETag
+
+## 범위 요청
+
+HTTP는 클라이언트가 문서의 일부분이나 특정 범위만 요청할 수 있도록 해 준다.  
+범위 요청을 이용하면, HTTP 클라이언트는 받다가 실패한 엔터티를 일부 혹은 범위로 요청함으로써 다운로드를 중단된 시점에서 재개할 수 있다.  
+클라이언트의 범위 요청은 오직 클라이언트와 서버가 같은 버전의 문서를 갖고 있을 때만 의미가 있다.
+
+## 델타 인코딩
+
+새 페이지 전체를 보내는 대신, 페이지에 대한 클라이언트의 사본에 대해 변경된 부분만을 서버가 보낸다면 클라이언트는 더 빨리 페이지를 얻을 수 있을 것이다.  
+델타 인코딩은 객체 전체가 아닌 변경된 부분에 대해서만 통신하여 전송량을 최적화하는, HTTP 프로토콜의 확장이다.
+
+이는 전송 시간을 줄일 수 있지만 구현하기가 까다로울 수 있다. 문서를 제공하는데 걸리는 시간이 줄어드는 대신, 서버는 문서의 과거 사본을 모두 유지하기 위해 디스크 공간을 더 늘려야 한다. 이는 전송량 감소로 얻은 이득을 무의미하게 만들 것이다.
