--- a/_posts/2022-04-25-0418-0424.md
+++ b/_posts/2022-04-25-0418-0424.md
@@ -340,7 +340,7 @@ export default memo(TodoList);
 
 # immer
 
-immer 라이브러리를 사용하면, 구조가 복잡한 객체도 매우 쉽고 짧은 코드를 사용하여 불변성을 유지하면서 업데이트해 줄 수 있다.
+immer 라이브러리를 사용하면, 구조가 복잡한 객체도 매우 쉽고 짧은 코드를 사용하여 불변성을 유지하면서 업데이트해 줄 수 있다.
 
 ```jsx
 import produce from "immer";
@@ -548,3 +548,286 @@ HTTP는 클라이언트가 문서의 일부분이나 특정 범위만 요청할 
 델타 인코딩은 객체 전체가 아닌 변경된 부분에 대해서만 통신하여 전송량을 최적화하는, HTTP 프로토콜의 확장이다.
 
 이는 전송 시간을 줄일 수 있지만 구현하기가 까다로울 수 있다. 문서를 제공하는데 걸리는 시간이 줄어드는 대신, 서버는 문서의 과거 사본을 모두 유지하기 위해 디스크 공간을 더 늘려야 한다. 이는 전송량 감소로 얻은 이득을 무의미하게 만들 것이다.
+
+<br />
+<br />
+<br />
+
+## 0422
+
+# 리액트 라우터
+
+**설치**
+
+```bash
+yarn add react-router-dom
+```
+
+## 라우터 연결
+
+프로젝트에 리액트 라우터를 적용할 때는 index.js 파일에서 react-router-dom에 내장되어 있는 BrowserRouter 컴포넌트를 사용하여 감싸면 된다.  
+이 컴포넌트는 웹 애플리케이션에 HTML5의 History API를 사용하여 페이지를 새로고침하지 않고도 주소를 변경하고, 현재 주소에 관련된 정보를 props로 쉽게 조회하거나 사용할 수 있도록 해 준다.
+
+```jsx
+const root = ReactDOM.createRoot(document.getElementById("root"));
+root.render(
+  <BrowserRouter>
+    <App />
+  </BrowserRouter>
+);
+```
+
+## 라우트 구성
+
+Routes, Route 컴포넌트를 사용해 경로에 따라 페이지 엘리먼트를 렌더링 하도록 구성한다.  
+Route 컴포넌트는 사용자의 현재 경로에 따라 다른 컴포넌트를 보여 준다.
+
+```jsx
+const App = () => {
+  return (
+    <div>
+      <Routes>
+        <Route path="/" element={<Home />} />
+        <Route path="/about" element={<About />} />
+      </Routes>
+    </div>
+  );
+};
+```
+
+useRoutes 훅을 사용하는 방법도 Routes 컴포넌트를 사용해 라우트를 구성하는 것과 기능적으로 동일하다.  
+다만, JS 객체를 사용해 라우트를 구성할 수 있다.
+
+```jsx
+import { useRoutes } from "react-router-dom";
+
+const App = () => {
+  const routeElements = useRoutes([
+    { path: "/", element: <Home /> },
+    { path: "/about", element: <About /> },
+  ]);
+
+  return <div>{routeElements}</div>;
+};
+```
+
+## Link 컴포넌트를 사용해서 다른 주소로 이동하기
+
+Link 컴포넌트는 클릭하면 다른 주소로 이동시켜 주는 컴포넌트이다.  
+페이지를 새로 불러오지 않고 애플리케이션은 그대로 유지한 상태에서 History API를 사용하여 페이지의 주소만 변경해 준다.
+
+```jsx
+const App = () => {
+  const routeElements = useRoutes([
+    { path: "/", element: <Home /> },
+    { path: "/about", element: <About /> },
+  ]);
+
+  return (
+    <div>
+      <ul>
+        <li>
+          <Link to="/">홈</Link>
+        </li>
+        <li>
+          <Link to="/about">소개</Link>
+        </li>
+      </ul>
+      <hr />
+      {routeElements}
+    </div>
+  );
+};
+```
+
+## URL 파라미터와 쿼리
+
+- 파라미터 예시: /profile/junghoon
+- 쿼리 예시: /about?details=true
+
+유동적인 값을 사용해야 하는 상황에서 파라미터나 쿼리 중 무엇을 써야하는 지에 대한 무조건적인 규칙은 없다.  
+일반적으로 파라미터는 특정 아이디 혹은 이름을 사용하여 조회할 때 사용하고, 쿼리는 어떤 키워드를 검색하거나 페이지에 필요한 옵션을 전달할 때 사용한다.
+
+### URL 파라미터
+
+URL 파라미터를 사용할 때는 라우트로 사용되는 컴포넌트에서 `useParams()` 훅을 이용해 params 값을 참조한다.  
+match 객체는 v6부터 더 이상 지원하지 않는다.  
+그리고 상위 컴포넌트에서 컴포넌트를 위한 라우트를 정의한다. 예를 들어, `/profile/:username`이라고 넣어 주면 된다.
+
+```jsx
+const data = {
+  velopert: {
+    name: "이정훈",
+    description: "리액트를 좋아하는 개발자",
+  },
+  gildong: {
+    name: "홍길동",
+    description: "고전 소설 홍길동전의 주인공",
+  },
+};
+
+const Profile = () => {
+  const { username } = useParams();
+
+  const profile = data[username];
+
+  if (!profile) {
+    return <div>존재하지 않는 사용자입니다.</div>;
+  }
+  return (
+    <div>
+      <h3>
+        {username}({profile.name})
+      </h3>
+      <p>{profile.description}</p>
+    </div>
+  );
+};
+```
+
+### URL 쿼리
+
+쿼리는 location 객체에 들어 있는 search 값에서 조회할 수 있다.  
+v6부터는 location 객체가 제공되지 않고, `useLocation()` 훅을 사용해 search를 조회할 수 있다.  
+쿼리 문자열을 객체로 변환할 때는 qs라는 라이브러리를 사용한다.
+
+URL 쿼리를 설정하거나, 가져올 때 `useSearchParams()`훅을 사용할 수도 있다.
+
+```jsx
+const About = () => {
+  const [searchParams, setSearchParams] = useSearchParams();
+  console.log(searchParams.get("a"));
+  // 콘솔에는 a를 키로 한 값이 결과로 나온다.
+
+  return (
+    <div>
+      <h1>소개</h1>
+      <p>이 프로젝트는 리액트 라우터 기초를 실습해 보는 예제 프로젝트입니다.</p>
+    </div>
+  );
+};
+```
+
+## 네스트(중첩) 라우팅
+
+라우트 내부에 중첩된 하위 라우팅 설정을 진행한다.  
+중첩된 라우팅 설정은 상위 Route 컴포넌트 내부에 중첩된 Route 컴포넌트로 구성한다.
+
+```jsx
+<Routes>
+  {/* exact prop은 기본 값이므로 명시적으로 설정하지 않아도 됩니다. */}
+  {/* children 대신, `element` prop을 사용합니다. */}
+  <Route path="/" element={<Home />} />
+  {/* 경로에 포함된 *는 하위에 중첩된 경로가 있음을 나타냅니다. */}
+  <Route path="users/*" element={<Users />} />
+    {/* users/me 중첩 경로 */}
+    <Route path="me" element={<OwnUserProfile />} />
+    {/* users/:id 중첩 경로 */}
+    <Route path=":id" element={<UserProfile />} />
+  </Route>
+</Routes>;
+```
+
+- element prop을 사용하면 중첩 라우트 구성을 분산시키지 않고 한 곳에서 관리할 수 있어 편리하다.
+- 중첩 라우트는 상위 경로에 상대적인 경로가 사용된다.
+
+## 라우트 정보
+
+v5 버전까지는 라우트 컴포넌트에 라우트 정보(history, location, match)가 제공됐지만, v6 버전부터는 제공되지 않는다.
+
+### useNavagation
+
+v5 버전의 useHistory 대신 v6 버전에서는 useNavigate 훅을 사용해 페이지 탐색이 가능하다.  
+이를 통해 컴포넌트 내에 구현하는 메서드에서 라우터 API를 호출할 수 있다.  
+예를 들어 특정 버튼을 눌렀을 때 뒤로 가거나, 로그인 후 화면을 전환하거나, 다른 페이지로 이탈하는 것을 방지할 때 활용한다.
+
+```jsx
+const HistorySample = () => {
+  const navigate = useNavigate();
+
+  const handleGoBack = () => navigate(-1);
+  const handleGoHome = () => navigate("/");
+
+  return (
+    <div>
+      <button onClick={handleGoBack}>뒤로</button>
+      <button onClick={handleGoHome}>홈으로</button>
+    </div>
+  );
+};
+```
+
+- navigate 함수에 -1을 전달하면 뒤로 가기와 동일하다.
+- 두 번째 인자로 replace나 state 값을 선택적으로 넘길 수 있다. replace를 true로 하면 history에 남지 않는다.
+
+### useLocation
+
+useLocation 훅은 Location 객체를 반환한다. 이 객체는 URL 경로가 업데이트 될 때 마다 사이드 이펙트를 수행하고자 할 때 유용하게 활용할 수 있다.
+
+```jsx
+import { useEffect } from "react";
+import { useLocation } from "react-router-dom";
+
+function App() {
+  let location = useLocation();
+
+  useEffect(() => {
+    // ... 사이드 이펙트
+  }, [location]);
+}
+```
+
+- URL 경로 문자를 가리키는 pathname, 쿼리를 가리키는 search, state 등의 프로퍼티에 접근 가능하다.
+
+### useMatch
+
+useMatch 훅은 현재 URL 기준으로 설정된 경로와 일치하는 데이터를 반환한다.
+
+```jsx
+const { pathname } = useLocation();
+const match = useMatch(pathname); // { params, pathname, pathnameBase, pattern }
+```
+
+## NavLink
+
+NavLink는 Link와 비슷하다. 현재 경로와 Link에서 사용하는 경로가 일치하는 경우 특정 스타일 혹은 CSS 클래스를 적용할 수 있는 컴포넌트이다.
+
+v5의 activeClassName, activeStyle prop이 제거되었다.  
+대신 className, style prop에 콜백함수를 설정하여 활성 상태에 따라 스타일을 변경할 수 있다.
+
+```jsx
+const Profiles = () => {
+  const activeStyle = {
+    background: "black",
+    color: "white",
+  };
+
+  return (
+    <div>
+      <h3>사용자 목록:</h3>
+      <ul>
+        <li>
+          <NavLink
+            to="/profiles/velopert"
+            style={({ isActive }) => (isActive ? activeStyle : {})}
+          >
+            velopert 프로필
+          </NavLink>
+        </li>
+        <li>
+          <NavLink
+            to="/profiles/gildong"
+            style={({ isActive }) => (isActive ? activeStyle : {})}
+          >
+            gildong 프로필
+          </NavLink>
+        </li>
+      </ul>
+      <Routes>
+        <Route path="/" element={<div>사용자를 선택해 주세요.</div>} />
+        <Route path="/:username" element={<Profile />} />
+      </Routes>
+    </div>
+  );
+};
+```
