--- a/_posts/2022-04-25-0418-0424.md
+++ b/_posts/2022-04-25-0418-0424.md
@@ -550,6 +550,11 @@ HTTP는 클라이언트가 문서의 일부분이나 특정 범위만 요청할 
 이는 전송 시간을 줄일 수 있지만 구현하기가 까다로울 수 있다. 문서를 제공하는데 걸리는 시간이 줄어드는 대신, 서버는 문서의 과거 사본을 모두 유지하기 위해 디스크 공간을 더 늘려야 한다. 이는 전송량 감소로 얻은 이득을 무의미하게 만들 것이다.
 
 <br />
+
+> **reference**  
+> [HTTP 완벽 가이드](http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&mallGb=KOR&barcode=9788966261208&orderClick=LAG&Kc=)
+
+<br />
 <br />
 <br />
 
