--- a/_posts/2022-04-30-0425-0431.md
+++ b/_posts/2022-04-30-0425-0431.md
@@ -180,3 +180,201 @@ const NewsList = ({ category }) => {
 
 - 코드가 이전보다 훨씬 간결해진 것을 확인할 수 있다.
 - 이와 같이 커스텀 훅을 만들어 사용하면 좋은 코드를 만들어 갈 수 있다.
+
+<br />
+<br />
+<br />
+
+## 0426
+
+# Context API
+
+Context API는 리액트 프로젝트에서 전역적으로 사용할 데이터가 있을 때 유용한 기능이다.  
+Context를 사용하면 컴포넌트 트리로 묶인 컴포넌트 간 데이터 공유가 비교적 수월해진다.  
+단, Context는 컴포넌트를 재사용하기 어렵게 만드므로 꼭 필요한 경우만 사용하는 것이 좋다.  
+ex) 사용자 로그인 정보, 애플리케이션 환경 설정, 테마 등
+
+전역 상태를 관리할 때 리액트 프로젝트에서 많은 컴포넌트를 거쳐야 할 때도 있고 다루어야 하는 데이터가 훨씬 많아질 수 있으므로 props를 전달하는 방식으로 사용하면 유지 보수성이 낮아질 가능성이 있다.  
+Context API를 사용하면 Context를 만들어 단 한 번에 원하는 값을 받아와 사용할 수 있다.
+
+## 새 Context 만들기
+
+새 Context를 만들 때는 createContext 함수를 사용한다.  
+파라미터에는 해당 Context의 기본 상태를 지정한다.
+
+```jsx
+import { createContext } from "react";
+
+const ColorContext = createContext({ color: "black" });
+
+export default ColorContext;
+```
+
+## Consumer 사용
+
+새로운 컴포넌트를 만들어서 Context 안에 있는 값을 사용할 때는 props로 받아 오는 것이 아니라 Context 안에 들어 있는 Consumer라는 컴포넌트를 통해 값을 사용한다.
+
+```jsx
+const ColorBox = () => {
+  return (
+    <ColorContext.Consumer>
+      {(value) => (
+        <div
+          style={{ width: "64px", height: "64px", background: value.color }}
+        />
+      )}
+    </ColorContext.Consumer>
+  );
+};
+```
+
+- Consumer 사이에 중괄호를 열어서 그 안에 함수를 넣어 주었다.
+- 이러한 패턴을 Function as a Child, 혹은 Render Props라고 한다. 컴포넌트의 children이 있어야 할 자리에 일반 JSX 혹은 문자열이 아닌 함수를 전달하는 것이다.
+
+**Render Props 예시**
+
+```jsx
+const RenderPropsSample = ({ children }) => {
+  return <div>결과: {children(5)}</div>;
+};
+
+// 사용
+<RenderPropsSample>{(value) => 2 * value}</RenderPropsSample>;
+```
+
+## Provider
+
+Provider를 사용하면 Context의 value를 변경할 수 있다.
+
+```jsx
+function App() {
+  return (
+    <ColorContext.Provider value={{ color: "red" }}>
+      <div>
+        <ColorBox />
+      </div>
+    </ColorContext.Provider>
+  );
+}
+```
+
+- Provider를 사용할 때는 value 값을 명시해 주어야 제대로 작동한다.
+
+## 동적 Context 사용하기
+
+Context의 value에는 무조건 상태 값만 있어야 하는 것은 아니다. 함수를 전달해 줄 수도 있다.
+
+```jsx
+const ColorContext = createContext({
+  state: { color: "black", subcolor: "red" },
+  actions: {
+    setColor: () => {},
+    setSubcolor: () => {},
+  },
+});
+
+const ColorProvider = ({ children }) => {
+  const [color, setColor] = useState("black");
+  const [subcolor, setSubcolor] = useState("red");
+
+  const value = {
+    state: { color, subcolor },
+    actions: { setColor, setSubcolor },
+  };
+
+  return (
+    <ColorContext.Provider value={value}>{children}</ColorContext.Provider>
+  );
+};
+
+const { Consumer: ColorConsumer } = ColorContext;
+
+export { ColorProvider, ColorConsumer };
+```
+
+- ColorProvider라는 컴포넌트를 새로 작성해 주었다. 그리고 이 컴포넌트에서는 ColorContext.Provider를 렌더링하고 있다.
+- Provider의 value에는 상태를 state로, 업데이트 함수는 actions로 묶어서 전달하고 있다.
+- Context에서 값을 동적으로 사용할 때 반드시 묶어서 줄 필요는 없지만, state와 actions 객체를 따로 분리해 주면 나중에 다른 컴포넌트에서 Context의 값을 사용할 때 편리하다.
+- createContext를 사용할 때 기본값은 실제 Provider의 value에 넣는 객체의 형태와 일치시켜 주는 것이 좋다. 이렇게 하면 Context 코드를 볼 때 내부 값이 어떻게 구성되어 있는지 파악하기도 쉽고, 실수로 Provider를 사용하지 않았을 때 리액트 앱에서 에러가 발생하지 않는다.
+
+## useContext Hook 사용
+
+리액트 내장 Hooks 중, useContext를 사용하면 함수 컴포넌트에서 Context를 아주 편하게 사용할 수 있다.
+
+```jsx
+const ColorBox = () => {
+  const { state } = useContext(ColorContext);
+
+  return (
+    <>
+      <div style={{ width: "64px", height: "64px", background: state.color }} />
+      <div
+        style={{
+          width: "32px",
+          height: "32px",
+          background: state.subcolor,
+        }}
+      />
+    </>
+  );
+};
+```
+
+- Render Props의 패턴보다, 훨씬 편하게 Context 값을 조회할 수 있다.
+- useContext의 인자로 사용하고자 하는 Context를 넘겨 사용하면 된다.
+
+## static contextType 사용
+
+클래스형 컴포넌트에서 Context를 좀 더 쉽게 사용하고 싶다면 static contextType을 정의하는 방법이 있다.
+
+```jsx
+const colors = ["red", "orange", "yellow", "green", "blue", "indigo", "violet"];
+
+class SelectColors extends Component {
+  static contextType = ColorContext;
+
+  handleSetColor = (color) => {
+    this.context.actions.setColor(color);
+  };
+
+  handleSetSubcolor = (subcolor) => {
+    this.context.actions.setSubcolor(subcolor);
+  };
+
+  render() {
+    return (
+      <div>
+        <h2>색상을 선택하세요.</h2>
+        <div style={{ display: "flex" }}>
+          {colors.map((color) => (
+            <div
+              key={color}
+              style={{
+                background: color,
+                width: "24px",
+                height: "24px",
+                cursor: "pointer",
+              }}
+              onClick={() => this.handleSetColor(color)}
+              onContextMenu={(e) => {
+                e.preventDefault();
+                this.handleSetSubcolor(color);
+              }}
+            />
+          ))}
+        </div>
+        <hr />
+      </div>
+    );
+  }
+}
+```
+
+- static contextType을 정의하면 클래스 메서드에서도 Context에 넣어 둔 함수를 호출할 수 있다.
+- 하지만, 한 클래스에서 하나의 Context밖에 사용하지 못한다는 단점이 있다.
+- 그러나 앞으로 클래스 컴포넌트를 작성하는 일은 많지 않기 때문에 useContext를 사용하는 쪽이 좋다.
+
+## 결론
+
+기존에는 컴포넌트 간 상태 교류를 무조건 부모에서 자식 흐름으로 전달했지만, 이제는 Context API를 통해 쉽게 상태를 교류할 수 있게 되었다.  
+하지만 프로젝트 컴포넌트 구조가 간단하고 상태의 종류가 많지 않다면, 굳이 Context를 사용할 필요는 없다. 전역적으로 여기저기서 사용되는 상태가 있고 컴포넌트의 개수가 많은 상황이라면, Context API를 사용하는 것이 권장된다.
