--- a/_posts/2022-04-30-0425-0431.md
+++ b/_posts/2022-04-30-0425-0431.md
@@ -378,3 +378,38 @@ class SelectColors extends Component {
 
 기존에는 컴포넌트 간 상태 교류를 무조건 부모에서 자식 흐름으로 전달했지만, 이제는 Context API를 통해 쉽게 상태를 교류할 수 있게 되었다.  
 하지만 프로젝트 컴포넌트 구조가 간단하고 상태의 종류가 많지 않다면, 굳이 Context를 사용할 필요는 없다. 전역적으로 여기저기서 사용되는 상태가 있고 컴포넌트의 개수가 많은 상황이라면, Context API를 사용하는 것이 권장된다.
+
+<br />
+<br />
+<br />
+
+## 0427
+
+## 캐시 제어
+
+HTTP는 문서가 만료되기 전까지 얼마나 오랫동안 캐시될 수 있게 할 것인지 서버가 설정할 수 있는 여러 가지 방법을 정의한다.
+
+### no-cache와 no-store 응답 헤더
+
+no-store와 no-cache 헤더는 캐시가 검증되지 않은 캐시된 객체로 응답하는 것을 막는다.
+
+Cache-Control: no-store  
+Cache-Control: no-chche
+
+no-store가 표시된 응답은 캐시가 그 응답의 사본을 만드는 것을 금지한다.  
+no-cache로 표시된 응답은 로컬 캐시 저장소에 저장될 수 있지만, 먼저 서버와 재검사를 하지 않고서는 캐시에서 클라이언트로 제공될 수 없을 뿐이다.
+
+### Max-Age 응답 헤더
+
+Cache-Control: max-age 헤더는 신선하다고 간주되었던 유효 시간을 의미하고, 초로 나타낸다.  
+서버는 최대 age를 0으로 설정함으로써, 캐시가 매 접근마다 문서를 캐시하거나 리프레시하지 않도록 요청할 수 있다.
+
+### Expires 응답 헤더
+
+초 단위의 시간 대신 실제 만료 날짜를 명시한다. deprecated
+
+### Must-Revalidate 응답 헤더
+
+Cache-Control: must-revalidate 응답 헤더는 캐시가 이 객체의 신선하지 않은 사본을 원 서버와의 재검사 없이는 제공해서는 안 됨을 의미한다.  
+만약 캐시가 신선도 검사를 시도했을 때 원 서버가 사용할 수 없는 상태라면, 캐시는 반드시 504를 반환해야 한다.  
+반면 Cache-Control: no-cache와의 차이점은 no-cache는 원 서버에 접근할 수 없는 경우 캐시 서버 설정에 따라 캐시 데이터를 반환할 수 있다.
