--- a/_posts/2022-05-04-0502-0508.md
+++ b/_posts/2022-05-04-0502-0508.md
@@ -114,3 +114,182 @@ DNS는 하나의 도메인에 여러 아이피 주소가 결부되는 것을 허
 
 **결함 마스킹 알고리즘**  
 DNS 서버는 네트워크의 상태를 모니터링하여 장애를 피해서 라우팅한다.
+
+<br />
+<br />
+<br />
+
+## 0503 TIL
+
+# 리덕스
+
+리덕스를 사용하면 컴포넌트의 상태 업데이트 관련 로직을 다른 파일로 분리시켜서 더욱 효율적으로 관리할 수 있다.  
+단순히 전역 상태 관리만 한다면 Context API를 사용하는 것만으로도 충분할 수 있다.  
+하지만 리덕스를 사용하면 상태를 더욱 체계적으로 관리할 수 있기 때문에 프로젝트의 규모가 클 경우에는 리덕스를 사용하는 것이 좋다. 코드의 유지 보수성도 높여 주고 작업 효율도 극대화해 주기 때문이다.  
+추가로 아주 편리한 개발자 도구를 지원하며, 미들웨어라는 기능을 제공하여 비동기 작업을 훨씬 효율적으로 관리할 수 있게 해 준다.
+
+## 상태 관리의 필요성
+
+애플리케이션의 상태 관리가 복잡해진 만큼 버그를 최소화하고, 잘 만들어진 UX를 제공하는 데 있어 상태를 효과적으로 관리할 필요성이 생겼다.  
+여기서 상태란 서버 응답, 캐시 데이터, 로컬 상태(아직 서버에 저장되지 않은 데이터) 등을 의미한다.  
+뿐만 아니라 활성화 된 라우트, 선택된 탭 핸들, 로딩 표시 여부, 페이지네이션 컨트롤 등 다양한 UI View 상태도 해당된다.
+
+리덕스는 다음과 같은 상황에 사용하기 적절하다.
+
+- 지속적으로 업데이트 되는 상당한 양의 상태가 있다.
+- 상태 업데이트를 위한 단 1개의 스토어가 필요하다.
+- 최상위 루트 컴포넌트가 모든 상태를 관리하는 것은 적절하지 않다.
+
+## 개념
+
+### 액션
+
+상태 변경을 설명하는 정보. 상태에 어떠한 변화가 필요하면 액션이 발생한다. 이는 하나의 객체로 표현된다.
+
+```javascript
+{
+  type: 'ADD_TODO',
+  data: {
+    id: 1,
+    text: '리덕스 배우기',
+  }
+}
+```
+
+- 액션 객체는 type 필드를 반드시 가지고 있어야 한다. 이 값을 액션의 이름이라고 생각하면 된다.
+- 그 외의 값들은 나중에 상태 업데이트를 할 때 참고해야 할 값이며, 작성자 마음대로 넣을 수 있다.
+- 액션 타입을 상수로 관리하는 것이 유지 관리하기 좋다.
+- 액션 타입은 대문자로 정의하고, 문자열 내용은 '모듈 이름/액션 이름'과 같은 형태로 작성한다. 문자열 안에 모듈 이름을 넣음으로써, 나중에 프로젝트가 커졌을 때 액션의 이름이 충돌되지 않게 해 준다.
+
+### 액션 생성 함수
+
+액션 생성 함수는 액션 객체를 만들어 주는 함수이다.
+
+```javascript
+const addTodo = (data) => ({
+  type: "ADD_TODO",
+  data,
+});
+```
+
+- 어떤 변화를 일으켜야 할 때마다 액션 객체를 만들어야 하는데 매번 액션 객체를 직접 작성하기 번거로울 수 있고, 만드는 과정에서 실수로 정보를 놓칠 수도 있다. 이런 일을 방지하기 위해 이를 함수로 만들어서 관리한다.
+- export를 넣어줘야 다른 파일에서 불러와 사용할 수 있다.
+
+### 리듀서
+
+리듀서는 변화를 일으키는 함수이다. 액션을 만들어서 발생시키면 리듀서가 현재 상태와 전달받은 액션 객체를 파라미터로 받아 온다.  
+그리고 두 값을 참고하여 새로운 상태를 만들어서 반환해 준다.
+
+```javascript
+const initialState = {
+  counter: 1,
+};
+
+function reducer(state = initialState, action) {
+  switch (action.type) {
+    case "INCREMENT":
+      return {
+        counter: state.counter + 1,
+      };
+    default:
+      return state;
+  }
+}
+```
+
+- 리듀서에서는 상태의 불변성을 유지하면서 데이터에 변화를 일으켜 주어야 한다.
+- 객체의 구조가 복잡해지면 불변성을 관리하며 업데이트하는 것이 굉장히 번거로울 수 있고 코드의 가독성도 나빠지기 때문에 리덕스의 상태는 최대한 깊지 않은 구조로 진행하는 것이 좋다.
+
+### 스토어
+
+한 개의 프로젝트는 단 하나의 스토어만 가질 수 있다.  
+스토어 안에는 현재 애플리케이션 상태와 리듀서가 들어가 있으며, 그 외에도 몇 가지 중요한 내장 함수를 지닌다.
+
+### 디스패치
+
+디스패치는 스토어의 내장 함수 중 하나이다.  
+디스패치는 액션 객체를 파라미터로 넣어서 호출하고, 이 함수가 호출되면 스토어는 리듀서 함수를 실행시켜서 새로운 상태를 만든다.
+
+### 구독
+
+구독도 스토어의 내장 함수 중 하나이다.  
+subscribe 함수 안에 리스너 함수를 파라미터로 넣어서 호출해 주면, 이 리스너 함수가 액션이 디스패치되어 상태가 업데이트될 때마다 호출된다.
+
+```javascript
+const listener = () => {
+  console.log("상태가 업데이트됨");
+};
+
+const unsubscribe = store.subscribe(listener);
+
+unsubscribe(); // 추후 구독을 비활성화할 때 함수를 호출
+```
+
+## 리덕스의 세 가지 규칙
+
+### 단일 스토어 (동기화 필요 x, 디버깅 용이)
+
+하나의 애플리케이션 안에는 하나의 스토어가 들어 있다.  
+여러 개의 스토어를 사용하는 것이 완전히 불가능하지는 않다. 특정 업데이트가 너무 빈번하게 일어나거나 애플리케이션의 특정 부분을 완전히 분리시킬 때 여러 개의 스토어를 만들 수도 있지만, 상태 관리가 복잡해질 수 있으므로 권장하지 않는다.
+
+### 읽기 전용 상태 (예측 가능)
+
+리덕스 상태는 읽기 전용이다. 상태를 업데이트 할 때 기존의 객체는 건드리지 않고 새로운 객체를 생성해 주어야 한다.  
+리덕스에서 불변성을 유지해야 하는 이유는 내부적으로 데이터가 변경되는 것을 감지하기 위해 얕은 비교 검사를 해서 좋은 성능을 유지하기 위한 것이다.
+
+### 리듀서는 순수한 함수
+
+변화를 일으키는 리듀서 함수는 순수한 함수여야 한다. 순수 함수는 다음 조건을 만족한다.
+
+- 리듀서 함수는 이전 상태와 액션 객체를 파라미터로 받는다.
+- 파라미터 외의 값에는 의존하면 안 된다.
+- 이전 상태는 절대로 건드리지 않고, 변화를 준 새로운 상태 객체를 만들어서 반환한다.
+- 똑같은 파라미터로 호출된 리듀서 함수는 언제나 똑같은 결과 값을 반환해야 한다.
+
+## 리덕스 디렉터리 구조
+
+### 일반적인 구조
+
+actions, constants, reducers라는 세 개의 디렉터리를 만들고 그 안에 기능별로 파일을 하나씩 만드는 방식이다.  
+코드를 종류에 따라 다른 파일에 작성하여 정리할 수있어서 편리하지만, 새로운 액션을 만들 때마다 세 종류의 파일을 모두 수정해야 하기 때문에 불편하기도 하다.
+
+### Ducks 패턴
+
+modules 폴더에 액션 타입, 액션 생성 함수, 리듀서 함수를 기능별로 파일 하나에 몰아서 다 작성하는 방식
+
+리듀서를 여러 개로 만들었을 때, 스토어를 만들 때는 리듀서를 하나만 사용해야 한다. 그렇기 때문에 기존에 만들었던 리듀서를 하나로 합쳐 주어야 하는데, 이 작업은 리덕스에서 제공하는 combineReducers라는 유틸 함수를 사용하면 쉽게 처리할 수 있다.
+
+```javascript
+const rootReducer = combineReducers({
+  counter,
+  todos,
+});
+
+export default rootReducer;
+```
+
+## 리액트 애플리케이션에 리덕스 적용
+
+```jsx
+import { createStore } from "redux";
+import rootReducer from "./modules";
+import { Provider } from "react-redux";
+
+const store = createStore(
+  rootReducer,
+  window.__REDUX_DEVTOOLS_EXTENSION__ && window.__REDUX_DEVTOOLS_EXTENSION__()
+);
+
+const root = ReactDOM.createRoot(document.getElementById("root"));
+root.render(
+  <Provider store={store}>
+    <App />
+  </Provider>
+);
+```
+
+1. index.js에서 스토어를 생성하여 첫 번째 인자로 리듀서를 전달한다.
+2. 두 번째 인자는 리덕스 tools를 사용하기 위해 전달하는 것이다.
+3. 리액트 컴포넌트에서 스토어를 사용할 수 있도록 App 컴포넌트를 Provider 컴포넌트로 감싸 준다. store를 props로 전달해 주어야 한다.
+
+스토어를 `store/configureStore.js`로 따로 빼서 구성에만 집중할 수도 있다.
