--- a/_posts/2022-05-04-0502-0508.md
+++ b/_posts/2022-05-04-0502-0508.md
@@ -293,3 +293,32 @@ root.render(
 3. 리액트 컴포넌트에서 스토어를 사용할 수 있도록 App 컴포넌트를 Provider 컴포넌트로 감싸 준다. store를 props로 전달해 주어야 한다.
 
 스토어를 `store/configureStore.js`로 따로 빼서 구성에만 집중할 수도 있다.
+
+<br />
+<br />
+<br />
+
+## 0504
+
+# HTTP 완벽가이드 스터디 회고
+
+이펙티브 타입스크립트 스터디에 이어서 두 번째 온라인 스터디가 막을 내렸다.  
+책의 내용이 오래되어서 공감이 어려운 부분도 많았지만, 그래도 HTTP와 관련된 많은 지식을 얻을 수 있었다고 생각한다.  
+이번 스터디를 통해 얻은 것은 다음과 같다.
+
+- HTTP에 대한 깊은 이해
+- 네트워크 & HTTP와 관련된 기반 지식
+
+마지막 장으로 갈수록 내가 지금 당장 알아야하는 개념인가? 하는 의문이 들어서 집중도가 떨어지기도 했지만, 스터디를 함께 하는 팀원들과 회의를 통해 학습 분량을 조절함으로서 위기를 극복할 수 있었다.
+
+어려운 점도 많았지만 얻은 것이 더 많은 스터디였다. 다만 일회독을 하며 내용을 이해한 것이고 온전히 내 것으로 만들기 위해서는 추가적인 복습이 필요할 것 같다.
+
+<br />
+<br />
+
+## 팀원들과의 회고
+
+![회고 1](https://user-images.githubusercontent.com/61184798/167258709-f36ca9a2-5d8e-4d62-a2bf-7f34b9de185f.png)
+![회고 2](https://user-images.githubusercontent.com/61184798/167258708-bcffc405-809a-46a5-a928-3cf632953c09.png)
+![회고 3](https://user-images.githubusercontent.com/61184798/167258706-621b2070-ff8c-4d86-b6f0-0344a2693308.png)
+![회고 4](https://user-images.githubusercontent.com/61184798/167258702-f46e3218-9531-4793-af9a-3a34744b93b0.png)
