--- a/_posts/2022-05-04-0502-0508.md
+++ b/_posts/2022-05-04-0502-0508.md
@@ -322,3 +322,154 @@ root.render(
 ![회고 2](https://user-images.githubusercontent.com/61184798/167258708-bcffc405-809a-46a5-a928-3cf632953c09.png)
 ![회고 3](https://user-images.githubusercontent.com/61184798/167258706-621b2070-ff8c-4d86-b6f0-0344a2693308.png)
 ![회고 4](https://user-images.githubusercontent.com/61184798/167258702-f46e3218-9531-4793-af9a-3a34744b93b0.png)
+
+<br />
+<br />
+<br />
+
+## 0505
+
+# 고양이 사진첩 만들기
+
+이전부터 바닐라 JS로 컴포넌트 방식 개발하는 데에 관심이 있었는데, 이번 기회에 날 잡고 도전 및 정리해보고자 한다.
+
+## 선언적 프로그래밍과 컴포넌트 추상화
+
+DOM을 접근하는 부분을 최소화하고, 명령형 프로그래밍 방식보다는 선언적 프로그래밍 방식으로 접근하는 것을 의미한다.  
+Node 데이터를 화면에 그리는 것을 기준으로 하면, 명령형 프로그래밍 방식의 경우 다음과 같다.
+
+```javascript
+function render(nodes) {
+  const $container = document.querySelector('.container');
+  nodes.forEach(node => {
+    ...
+  })
+}
+```
+
+위의 코드의 경우 크게 문제가 되는 것은 아니지만, DOM에 접근하고 업데이트하는 시점에 대한 명확한 기준점이 없기 때문에, 코드가 거대해지고 UI의 업데이트가 많아질 경우 어느 지점에서 어느 시점에 DOM을 업데이트 했느냐를 추적하기가 점점 힘들어진다.
+
+```javascript
+function Nodes({ $app, initialState }) {
+  this.state = initialState;
+
+  this.$target = document.createElement("ul");
+  $app.appendChild(this.$target);
+
+  this.state = (nextState) => {
+    this.state = nextState;
+
+    this.render();
+  };
+
+  this.render = () => {
+    this.$target.innerHTML = this.state.nodes.map(
+      (node) => `<li>${node.name}</li>`
+    );
+  };
+
+  this.render();
+}
+```
+
+- constructor - new 키워드를 통해 해당 컴포넌트가 생성되는 시점에 실행된다. 해당 컴포넌트가 표현될 element를 생성하고, 파라미터로 받은 $app에 렌더링하도록 한다.
+- render - 해당 컴포넌트의 state를 기준으로 자신의 element에 렌더링한다. 자신의 상태를 기준으로 렌더링해야하기 때문에, 별도의 파라미터를 받지 않아야 한다.
+- setState - 해당 컴포넌트의 state를 갱신한다. render 함수가 별도의 파라미터 없이 자신의 상태를 기준으로 렌더링하도록 작성이 되어있기 때문에, state를 변경하고 다시 render 함수를 부르도록 함으로써 업데이트된 상태를 화면에 반영할 수 있게 된다.
+
+이런 식으로 작성하면, 실제 DOM을 직접 제어하는 부분을 컴포넌트가 인스턴스화 되는 시점, 그리고 render 함수가 다시 호출되는 시점으로 제한할 수 있다.
+
+## 컴포넌트간의 의존도 줄이기
+
+위의 코드는 단순히 상태를 기준으로 렌더링만 하는 코드이고, 실제 UI 인터렉션에 따라 state를 변경해야하는 경우 a 컴포넌트에서 일어나는 인터렉션에 의해 b 컴포넌트에 영향을 줄 수 있다.
+
+이때, a 코드 내에서 b 컴포넌트를 직접 다루거나 업데이트 하도록 코드를 작성하게 되면 a 컴포넌트를 독립적으로 사용할 수 없게 된다. b에 의존성이 생기기 때문이다. 즉, b가 필요없이 a만 필요한 화면에서는 쓸 수가 없게 된다.
+
+이런 경우 일반적으로 두 컴포넌트를 조율하는 더 상위의 컴포넌트를 만들고, 콜백 함수를 통해 느슨하게 결합한다. a를 클릭했을 때, b의 변화를 줘야 한다면 a의 파라미터로 onClick 이벤트 핸들러를 받고, render 함수를 수정한다.
+
+```javascript
+function Nodes({ $app, initialState, onClick }) {
+  this.state = initialState;
+  this.onClick = onClick;
+
+  this.$target = document.createElement("div");
+  $app.appendChild(this.$target);
+
+  this.state = (nextState) => {
+    this.state = nextState;
+    this.render();
+  };
+
+  this.render = () => {
+    if (this.state.nodes) {
+      const nodesTemplate = this.state.nodes
+        .map((node) => {
+          const iconPath =
+            node.type === "FILE"
+              ? "./assets/file.png"
+              : "./assets/directory.png";
+
+          return `
+                    <div class="Node" data-node-id="${node.id}">
+                        <img src=${iconPath} />
+                        <div>${node.name}</div>
+                    </div>
+                `;
+        })
+        .join("");
+
+      this.$target.innerHTML = !this.state.isRoot
+        ? `<div class="Node"><img src="/assets/prev.png"></div>${nodesTemplate}`
+        : nodesTemplate;
+    }
+
+    this.$target.querySelectorAll(".Node").forEach(($node) => {
+      $node.addEventListener("click", (e) => {
+        const { nodeId } = e.target.dataset;
+        const selectedNode = this.state.nodes.find(
+          (node) => node.id === nodeId
+        );
+
+        if (selectedNode) {
+          this.onClick(selectedNode);
+        }
+      });
+    });
+  };
+  this.render();
+}
+```
+
+- render 함수에서 렌더링된 이후 클릭 가능한 모든 요소에 click 이벤트를 건다.
+
+```javascript
+function App($app) {
+  this.state = {
+    isRoot: false,
+    nodes: [],
+    depth: [],
+  };
+
+  const breadcrumb = new Breadcrumb({
+    $app,
+    initialState: this.state.depth,
+  });
+  const nodes = new Nodes({
+    $app,
+    initialState: {
+      isRoot: this.state.isRoot,
+      nodes: this.state.nodes,
+    },
+    onClick: (node) => {
+      if (node.type === "DIRECTORY") {
+        // DIRECTORY인 경우 처리
+      } else if (node.type === "FILE") {
+        // FILE인 경우 처리
+      }
+    },
+  });
+}
+```
+
+- Nodes와 Breadcrumb를 조율하기 위한 App 컴포넌트이다.
+- onClick에는 함수를 파라미터로 던지고, Nodes 내에서 클릭 발생 시 이 함수를 호출하게 한다. 그렇게 하면 Nodes 내에선 클릭 후 어떤 로직이 일어날지 알아야 할 필요가 없다.
+- 이렇게 하면 App이 두 컴포넌트를 조율하는 형태가 되며, 두 컴포넌트는 독립적으로 동작하고 또 다른 곳에 쉽게 재활용 할 수 있는 구조가 된다.
