--- a/_posts/2022-05-17-0509-0515.md
+++ b/_posts/2022-05-17-0509-0515.md
@@ -13,6 +13,14 @@ excerpt: ""
 그 중 한 기업에서는 기존에 사용하던 방식대로 controller, store, render로 파일을 구분하여 기능을 구현하였는데, 이번 기회에는 새로운 도전 방식으로 구현해보고자 도전하게 되었다.  
 방식은 프로그래머스 사전 과제의 고양이 사진첩 만들기와 황준일 개발자님의 블로그를 참고하였다.
 
+## 컴포넌트와 상태 관리
+
+브라우저와 자바스크립트가 발전하는 과정에서 아예 브라우저 단에서 렌더링을 하고, 서버에서는 REST API 혹은 GraphQL 같이 브라우저 렌더링에 필요한 데이터만 제공하는 형태로 기술이 변화했다.
+
+이제는 직접적으로 DOM을 다루는 행위가 급격하게 감소했고, 상태를 기준으로 DOM을 렌더링하는 형태로 발전한 것이다. DOM이 변하는 경우가 상태에 종속 되어버린 것이다. 반대로 말하면, State가 변하지 않을 경우 DOM이 변하면 안 되는 것이다. 이러한 과정 속에서 CSR이라는 개념과 상태 관리라는 개념이 생기게 되었다.
+
+SSR을 사용하는 시절에는 서버에서 HTML을 만들어서 클라이언트에 넘겨주었기에 브라우저에서는 굳이 데이터의 깊은 단계까지, 정교하게 관리할 필요가 없었다. 그러나 브라우저 단에서 렌더링을 하기 위해선, 렌더링에 필요한 상태를 정교하게 관리해야 한다. 그래서 Redux 같은 상태관리 라이브러리가 생겨났다.
+
 ## Entry Point
 
 시작점은 index.js에서부터 시작한다.
@@ -28,7 +36,7 @@ new App(document.querySelector("#app"));
 ## 컴포넌트 추상화
 
 새로운 패턴의 JS 개발을 보며 리액트와 코드가 상당히 닮아있다는 생각을 했다.  
-이전과는 다르게 클래스 문법을 사용해서 컴포넌트를 구현하였고, 공통되는 코드 로직을 Component 클래스로 분리하고, 이를 위임받아 사용하도록 작성했다.
+이전과는 다르게 클래스 문법을 사용해서 컴포넌트를 구현하였고, 공통되는 코드 로직을 Component 클래스로 추상화하고, 이를 위임받아 사용하도록 작성했다.
 
 ```javascript
 export default class Component {
@@ -70,4 +78,134 @@ export default class Component {
 - setUp에서는 상태 초기화를 담당한다.
 - render에서는 파라미터로 전달받은 target에 template에 정의한 값을 innerHTML로 할당하고, mounted 메서드를 호출한다. mounted에서는 하위의 컴포넌트를 불러와서 생성하는 코드를 작성한다.
 - setEvent에서는 이벤트 위임을 활용하여 이벤트 핸들러를 구현한다.
-- setState로 상태가 변경되면 다시 리렌더링이 발생하는 구조이다.
+- setState로 상태가 변경되면 다시 리렌더링이 발생하는 구조이다. 여기서 state는 setState로만 변경해야 한다.
+
+## 사용 예시
+
+```javascript
+import Component from "./Component";
+
+export default class Modal extends Component {
+  template() {
+    const { showModal } = this.props;
+
+    return `
+      ${
+        showModal
+          ? `
+            <div class="modal-content">
+              <h2>강의 추가</h2>
+              <div class="title">
+                <label for="course-title-input">강의 제목</label>
+                <input
+                  type="text"
+                  id="course-title-input"
+                  class="course-title-input"
+                  placeholder="강의 제목을 입력해주세요"
+                  autocomplete="off"
+                />
+              </div>
+              <div class="price">
+                <label for="course-price-input">강의 가격</label>
+                <input
+                  type="number"
+                  id="course-price-input"
+                  class="course-price-input"
+                  placeholder="강의 가격을 입력해주세요"
+                  step="1000"
+                  autocomplete="off"
+                />
+              </div>
+              <div class="btn-group">
+                <button type="button" class="cancel-btn">취소</button>
+                <button type="button" class="confirm-btn">확인</button>
+              </div>
+            </div>
+            <div class="dim"></div>`
+          : ""
+      }
+    `;
+  }
+
+  setEvent() {
+    const { closeModal, addCourse } = this.props;
+
+    this.$target.addEventListener("click", (e) => {
+      if (e.target.classList.contains("cancel-btn")) closeModal();
+      else if (e.target.classList.contains("confirm-btn")) {
+        const title = document
+          .querySelector(".course-title-input")
+          .value.trim();
+        const price = document.querySelector(".course-price-input").value;
+
+        if (title === "") {
+          alertErrorMessage("강의 제목을 입력해주세요.");
+          return;
+        }
+        if (price === "" || +price < 0) {
+          alertErrorMessage("강의 가격에는 0 이상의 숫자만 입력해주세요.");
+          return;
+        }
+
+        addCourse(title, price);
+      }
+    });
+  }
+}
+```
+
+- 위의 컴포넌트를 사용한 예시이다. template 메서드를 확장하여 사용하면 자동으로 render 메서드가 실행되고, 불필요한 코드를 반복해서 사용해야할 필요가 사라진다.
+
+<br />
+<br />
+<br />
+
+## 0513
+
+# GraphQL
+
+기존 Rest API 통신은 크게 두 가지 문제점을 가지고 있다.
+
+## over fetching
+
+- 필요한 것보다 더 많은 데이터를 가져온 경우
+- 예를 들어, 영화 API로 데이터를 불러와서 그 중 제목 데이터만 사용하는 경우 나머지 정보는 필요 없게 되는데 이를 오버 패칭이라고 함
+- GraphQL은 쿼리 랭귀지이기 때문에 정확하게 필요한 정보만 요청할 수 있어서, 필요없는 데이터는 받지않고 정확히 필요한 정보만 요청할 수 있다.
+
+## under fetching
+
+- 필요한 것보다 적은 양의 데이터를 가져온 경우
+- 영화 API에서 곧 개봉하는 영화와 현재 상영중인 영화 데이터를 받아와야 할 경우 REST를 사용한다면 2개의 각기 다른 URL로 요청을 보내야 한다. 이는 로딩 타임 증가로 이어진다. GraphQL을 사용하면 1개의 쿼리로 2개의 정보를 한 번에 요청할 수 있다.
+
+먼저 특정 기능을 위해 여러번 api가 호출되고, 특정 요청에 적절한 응답을 돌려주기 위해서는 api를 새로 만들어야 합니다.
+그리고 api를 유지보수하기 어렵다는 문제점이 있습니다.
+즉, 관리해야 할 endpoint의 증가로 인하여 발생되는 문제점입니다.
+
+기존의 rest api에서 정보를 얻기 위해 여러번 네트워크를 호출하거나 ,다양한 api를 호출해야 했습니다.  
+하지만 graphql은 단 하나의 endpoint를 제공하며, 단 한 번의 요청으로 모든 정보를 가져옵니다.
+
+## 장단점
+
+### 장점
+
+- 오버 패칭과 언더 패칭의 문제를 개선해준다.
+- HTTP 요청 횟수와, 응답 사이즈를 줄일 수 있음
+
+### 단점
+
+- http 캐싱이 REST보다 복잡함
+- 파일 전송 등 Text만으로 하기 힘든 작업들을 처리하기 복잡함
+- 고정된 요청과 응답만 필요할 경우 Query로 인해 요청의 크기가 REST API보다 커짐
+
+## 사용하기 좋은 경우
+
+### GraphQL
+
+- 서로 다른 모양의 다양한 요청들에 대해 응답할 수 있어야 할 때
+- 대부분의 요청이 CRUD에 해당할 때
+
+### REST API
+
+- 캐싱 기능을 잘 사용하고 싶을 때
+- 파일 전송 등 단순한 Text로 처리되지 않는 요청들이 있을 때
+- 요청의 구조가 명확하게 정해져 있을 때
