--- a/_posts/2022-05-17-0509-0515.md
+++ b/_posts/2022-05-17-0509-0515.md
@@ -209,3 +209,51 @@ export default class Modal extends Component {
 - 캐싱 기능을 잘 사용하고 싶을 때
 - 파일 전송 등 단순한 Text로 처리되지 않는 요청들이 있을 때
 - 요청의 구조가 명확하게 정해져 있을 때
+
+<br />
+<br />
+<br />
+
+## 0514
+
+최근에 디자인 패턴 공부에 대한 중요성을 느끼고 나서, 제대로 정리해보고자 개인 스터디를 시작하게 되었다.
+
+스터디 내용은 [Refactoring guru](https://refactoring.guru/design-patterns/what-is-pattern)의 링크에 있는 정리 내용을 보고 학습할 계획이다.  
+물론 모든 패턴 내용을 처음부터 끝까지 다 살펴보면 제일 좋겠지만, 전부터 궁금했던 패턴들 우선적으로 살펴볼 예정이다.  
+이번 스터디가 아키텍처를 설계하는 데에 있어 많은 도움이 되기를 희망한다.
+
+---
+
+# 디자인 패턴이란?
+
+디자인 패턴은 소프트웨어 디자인에서 일반적으로 발생하는 문제들에 대한 일반적인 해결책이다.  
+이는 코드에서 반복되는 디자인 문제를 해결하기 위해 사용자 지정할 수 있는 청사진과도 같다.
+
+패턴은 특정 코드 조각이 아니라 특정 문제를 해결하기 위한 일반적인 개념이다. 패턴 세부 사항을 따르고 자신의 프로그램의 현실에 맞는 솔루션을 구현할 수 있다.
+
+알고리즘과 디자인 패턴은 모두 일반적인 솔루션을 설명하기 때문에 종종 혼동된다. 하지만 알고리즘은 항상 어떤 목표에 달성할 수 있는 명확한 일련의 작업을 의미하지만, 패턴은 솔루션에 대한 보다 높은 수준의 설명이다. 두 개의 다른 프로그램에 적용된 동일한 패턴의 코드는 다를 수 있다.
+
+알고리즘을 비유하자면 요리법이라고 할 수 있다. 반면, 패턴은 청사진에 가깝다. 결과와 특징이 무엇인지 확인할 수 있지만, 정확한 구현 순서는 사용자에게 달려있다.
+
+### 패턴의 역사
+
+패턴은 객체 지향 설계의 일반적인 문제에 대한 일반적인 솔루션이다.  
+다양한 프로젝트에서 솔루션이 계속 반복되면 누군가는 결국 이름을 지정하고 솔루션을 설명한다. 이것이 기본적으로 패턴이 발견되는 방법이다.
+
+### 패턴을 배워야 하는 이유
+
+- 디자인 패턴은 소프트웨어 디자인의 일반적인 문제에 대한 **시도되고 테스트된 솔루션**의 툴킷이다. 이러한 문제가 발생하지 않더라도 패턴을 아는 것은 객체 지향 설계 원칙을 사용하여 모든 종류의 문제를 해결하는 방법을 가르쳐주기 때문에 여전히 유용하다.
+- 디자인 패턴은 팀원이 보다 효율적으로 의사 소통하는 데 사용할 수 있는 공통 언어를 정의한다. 예를 들어, 패턴의 이름을 안다면 싱글톤이 무엇인지 설명할 필요가 없다.
+
+### 패턴의 분류
+
+디자인 패턴은 복잡성, 세부 수준 및 디자인 중인 전체 시스템에 대한 적용 범위에 따라 다르다.
+
+가장 기본적이고 낮은 수준의 패턴은 종종 **idioms**(관용구)라고 불리는데 이들은 보통 하나의 프로그래밍 언어에만 적용된다.  
+가장 보편적이고 높은 수준의 패턴은 **architectural patterns**(아키텍처 패턴)이다. 개발자는 이러한 패턴을 대부분의 언어로 구현할 수 있다. 다른 패턴과 달리 전체 애플리케이션 아키텍처를 설계하는 데 사용될 수 있다.
+
+또한 모든 패턴은 **의도 또는 목적에 따라 분류**될 수 있다. 이 책은 세 가지 패턴의 주요 그룹을 다룬다.
+
+- **Creational patterns**(생성 패턴)은 기존 코드의 유연성과 재사용성을 증가시키는 객체 생성 메커니즘을 제공한다.
+- **Structural patterns**(구조적 패턴)은 구조를 유연하고 효율적으로 유지하면서 객체와 클래스를 더 큰 구조로 조립하는 방법을 설명한다.
+- **Behavioral patterns**(행동 패턴)은 효과적인 의사소통과 객체 간의 책임 할당을 처리한다.
