--- a/_posts/2022-05-17-0509-0515.md
+++ b/_posts/2022-05-17-0509-0515.md
@@ -265,31 +265,32 @@ export default class Modal extends Component {
 ## 0515
 
 # Observer 패턴
+
 ## 의도
+
 옵저버 패턴은 관찰 중인 객체에서 어떤 이벤트가 발생했을 때, 다른 객체들에게 알리는 구독 메커니즘을 정의하는 행동 디자인 패턴이다.
 ![779B15B2-81D3-49E1-9720-9035C1B62355](https://user-images.githubusercontent.com/61184798/168980974-735e5910-2fff-4993-a91b-caa0c1f53778.png)
 
-
-
 ## 문제점
+
 고객과 상점 두 가지 형태의 객체가 존재한다고 상상해보자. 고객은 곧 매장에 출시될 특정 브랜드의 제품에 매우 관심이 있다.  
 고객은 매일 매장을 방문하여 제품 재고를 확인할 수 있다. 그러나 제품이 아직 운송 중일 때의 매장 방문은 대부분 무의미하다.
 
 ![F83B7D10-C75E-4D8D-82E4-0AF1F45A80B3](https://user-images.githubusercontent.com/61184798/168980982-0ac3ea2e-807c-46ab-ba0b-d81f88e7d18c.png)
 
-반면에 상점은 새 제품이 출시될 때마다 모든 고객에게 수많은 이메일(스팸으로 간주될 수 있는)을 보낼 수 있다. 이것은 매일 방문하는 고객에게는 도움이 될 수 있지만, 새로운 제품에 관심이 없는 다른 고객들을 화나게 할 것이다.  
+반면에 상점은 새 제품이 출시될 때마다 모든 고객에게 수많은 이메일(스팸으로 간주될 수 있는)을 보낼 수 있다. 이것은 매일 방문하는 고객에게는 도움이 될 수 있지만, 새로운 제품에 관심이 없는 다른 고객들을 화나게 할 것이다.
 
 위와 같은 방법은 고객이 제품 가용성을 확인하는 데 시간을 낭비하거나 상점이 잘못된 고객에게 알리는 등 리소스를 낭비하게 된다.
 
-
 ## 해결책
+
 **퍼블리셔**(publisher) - 관심있는 상태 객체이자, 상태가 변경되었을 때 다른 객체에게 알리는 객체  
 **구독자**(subscriber) - 퍼블리셔의 상태 변화를 추적하기 원하는 모든 객체
 
 옵저버 패턴은 퍼블리셔 클래스에 구독 메커니즘을 추가하여 개별 객체가 해당 퍼블리셔로부터 오는 이벤트를 구독하거나 구독 취소할 수 있도록 제안한다. 실제로 이 메커니즘은 구독자 객체에 대한 참조 목록을 저장하기 위한 배열 필드와 해당 목록에 구독자를 추가하거나 제거할 수 있는 여러 공용 메서드로 구성된다.
 
 ![29D1F7F2-EDD8-4CD1-A34A-7697C5D93AD9](https://user-images.githubusercontent.com/61184798/168981003-41f0f780-07cb-4b24-9a0e-ae124c3b99c1.png)  
-이후 퍼블리셔에게 중요한 이벤트가 발생할 때마다 구독자를 통해 객체에 대한 특정 알림 메서드를 호출한다.  
+이후 퍼블리셔에게 중요한 이벤트가 발생할 때마다 구독자를 통해 객체에 대한 특정 알림 메서드를 호출한다.
 
 실제 앱에는 동일한 퍼블리셔 클래스의 이벤트를 추적하는 데 관심이 있는 수십 개의 서로 다른 구독자 클래스가 있을 수 있다.  
 퍼블리셔를 이러한 모든 클래스에 연결하고 싶지는 않을 것이다. 그리고 퍼블리셔 클래스가 다른 사람들에 의해 사용되어야 한다면 그들 중 일부에 대해 미리 알지 못할 수도 있다.
@@ -300,19 +301,17 @@ export default class Modal extends Component {
 ![8D6EBA99-22D2-4286-991B-F2C1DD8332FD](https://user-images.githubusercontent.com/61184798/168981008-095675b0-4214-4303-8852-bdda51164d72.png)  
 앱에 여러 유형의 퍼블리셔가 있고 구독자가 모든 퍼블리셔와 호환되도록 하려면 모든 퍼블리셔가 동일한 인터페이스를 따르도록 할 수 있다. 이 인터페이스는 몇 가지 구독 방법만 설명하면 된다. 이 인터페이스를 통해 구독자는 구체적인 클래스에 연결하지 않고도 게시자의 상태를 관찰할 수 있다.
 
-
-
 ## 실세계와 유사한 사례
+
 ![808D0CB5-B9E2-4B39-BA38-DD1F3C5D32AB](https://user-images.githubusercontent.com/61184798/168981016-61e03ad1-5c85-4748-947a-0bd2ba7efa4f.png)
-* 신문이나 잡지를 구독하면 더 이상 다음 호가 있는지 확인하기 위해 상점에 갈 필요가 없다. 대신 발행인은 발행 직후 우편함으로 직접 보낸다.
-* 발행인은 구독자 목록을 유지 관리하고 관심 있는 잡지를 알고 있다. 구독자는 발행인이 새 잡지 호를 보내는 것을 중단하려는 경우 언제든지 목록을 떠날 수 있다.
 
-
-
+- 신문이나 잡지를 구독하면 더 이상 다음 호가 있는지 확인하기 위해 상점에 갈 필요가 없다. 대신 발행인은 발행 직후 우편함으로 직접 보낸다.
+- 발행인은 구독자 목록을 유지 관리하고 관심 있는 잡지를 알고 있다. 구독자는 발행인이 새 잡지 호를 보내는 것을 중단하려는 경우 언제든지 목록을 떠날 수 있다.
 
 ## 구조
 
 ![AF509362-4D0C-41F3-9B2F-8E8EDD5C8FCC](https://user-images.githubusercontent.com/61184798/168981038-c3fc2c5d-3dee-4794-883a-c413f717c256.png)
+
 1. 퍼블리셔는 다른 객체에 대한 관심 이벤트를 발행한다. 이러한 이벤트는 퍼블리셔가 상태를 변경하거나 일부 동작을 실행할 때 발생한다. 퍼블리셔에는 새 구독자가 가입하고 나갈 수 있도록 하는 구독 인프라가 포함되어 있다.
 2. 새 이벤트가 발생하면 퍼블리셔는 구독 목록을 살펴보고 각 구독자 객체의 구독자 인터페이스에 선언된 알림 메서드를 호출한다.
 3. 구독자 인터페이스는 알림 인터페이스를 선언한다. 대부분의 경우 단일 update 방법으로 구성된다. 메서드에는 퍼블리셔가 업데이트와 함께 일부 이벤트 세부 정보를 전달할 수 있도록 하는 여러 매개 변수가 있을 수 있다.
@@ -320,26 +319,25 @@ export default class Modal extends Component {
 5. 일반적으로 구독자는 업데이트를 올바르게 처리하기 위해 몇 가지 컨텍스트 정보가 필요하다. 이러한 이유로 퍼블리셔는 종종 일부 컨텍스트 데이터를 알림 메서드의 인수로 전달한다.
 6. 클라이언트는 게시자 및 구독자 객체를 별도로 생성한 다음 퍼블리셔 업데이트를 위해 구독자를 등록한다.
 
-
-
 ## 적용 가능성
-* 한 객체의 상태가 변경되면 다른 객체도 변경해야 할 수 있고, 실제 객체 집합을 미리 알 수 없거나 동적으로 변경되는 경우 옵저버 패턴을 사용한다.
-* 앱의 일부 객체가 제한된 시간 동안 또는 특정 경우에만 다른 객체를 관찰해야 하는 경우 패턴을 사용한다.
-* 예시로 리덕스에서도 옵저버 패턴을 활용하여 스토어 상태가 변경되면 구독 함수를 실행한다.
 
-
+- 한 객체의 상태가 변경되면 다른 객체도 변경해야 할 수 있고, 실제 객체 집합을 미리 알 수 없거나 동적으로 변경되는 경우 옵저버 패턴을 사용한다.
+- 앱의 일부 객체가 제한된 시간 동안 또는 특정 경우에만 다른 객체를 관찰해야 하는 경우 패턴을 사용한다.
+- 예시로 리덕스에서도 옵저버 패턴을 활용하여 스토어 상태가 변경되면 구독 함수를 실행한다.
 
 ## 장단점
+
 ### 장점
-* 개방/폐쇄 원칙 - 퍼블리셔의 코드를 변경하지 않고도 새 구독자 클래스를 도입할 수 있다.
-* 런타임에 객체 간의 관계를 설정할 수 있다.
+
+- 개방/폐쇄 원칙 - 퍼블리셔의 코드를 변경하지 않고도 새 구독자 클래스를 도입할 수 있다.
+- 런타임에 객체 간의 관계를 설정할 수 있다.
 
 ### 단점
-* 구독자는 무작위 순서로 알림을 받는다.
 
-
+- 구독자는 무작위 순서로 알림을 받는다.
 
 ## 타입스크립트로 패턴 구현
+
 ```typescript
 /**
  * Subject 인터페이스는 구독 관리를 위한 메서드를 정의한다.
@@ -367,25 +365,25 @@ class ConcreteSubject implements Subject {
   public attach(observer: Observer): void {
     const isExist = this.observers.includes(observer);
     if (isExist) {
-      return console.log('Subject: Observer has been attached already.');
+      return console.log("Subject: Observer has been attached already.");
     }
 
-    console.log('Subject: Attached an observer.');
+    console.log("Subject: Attached an observer.");
     this.observers.push(observer);
   }
 
   public detach(observer: Observer): void {
     const observerIndex = this.observers.indexOf(observer);
     if (observerIndex === -1) {
-      return console.log('Subject: Nonexistent observer.');
+      return console.log("Subject: Nonexistent observer.");
     }
 
     this.observers.splice(observerIndex, 1);
-    console.log('Subject: Detached an observer.');
+    console.log("Subject: Detached an observer.");
   }
 
   public notify(): void {
-    console.log('Subject: Notifying observers...');
+    console.log("Subject: Notifying observers...");
     for (const observer of this.observers) {
       observer.update(this);
     }
@@ -403,15 +401,18 @@ class ConcreteSubject implements Subject {
 class ConcreteObserverA implements Observer {
   public update(subject: Subject): void {
     if (subject instanceof ConcreteSubject && subject.state < 3) {
-      console.log('ConcreteObserverA: Reacted to the event.');
+      console.log("ConcreteObserverA: Reacted to the event.");
     }
   }
 }
 
 class ConcreteObserverB implements Observer {
   public update(subject: Subject): void {
-    if (subject instanceof ConcreteSubject && (subject.state === 0 || subject.state >= 2)) {
-      console.log('ConcreteObserverB: Reacted to the event.');
+    if (
+      subject instanceof ConcreteSubject &&
+      (subject.state === 0 || subject.state >= 2)
+    ) {
+      console.log("ConcreteObserverB: Reacted to the event.");
     }
   }
 }
@@ -432,8 +433,6 @@ subject.detach(observer2);
 subject.someBusinessLogic();
 ```
 
-
-
 ### 실행 결과
-![C75281B1-E7CC-44D0-8E5C-0DA97A1E5D3E](https://user-images.githubusercontent.com/61184798/168981062-1e5f3ee6-94b3-434b-b757-5dea6a0bc952.png)
 
+![C75281B1-E7CC-44D0-8E5C-0DA97A1E5D3E](https://user-images.githubusercontent.com/61184798/168981062-1e5f3ee6-94b3-434b-b757-5dea6a0bc952.png)
