--- a/_posts/2022-05-19-0516-0522.md
+++ b/_posts/2022-05-19-0516-0522.md
@@ -107,3 +107,125 @@ clientCode();
 ### 실행 결과
 
 ![CE8D847D-2AC2-487E-8540-ED63668FC750](https://user-images.githubusercontent.com/61184798/169433554-458702f8-1e7e-4e7f-8cca-18b12b0c3324.png)
+
+<br />
+<br />
+<br />
+
+## 0517
+
+# JS 복습
+
+## 자바스크립트 특징
+
+- 자바스크립트는 HTML, CSS와 함께 웹을 구성하는 요소 중 하나로 웹 브라우저에서 동작하는 유일한 프로그래밍 언어다.
+- 개발자가 별도의 컴파일 작업을 수행하지 않는 인터프리터 언어다. 대부분의 모던 JS 엔진은 인터프리터와 컴파일러의 장점을 결합해 비교적 처리 속도가 느린 인터프리터의 단점을 해결했다. 하지만 JS는 런타임에 컴파일되며 실행 파일이 생성되지 않고 인터프리터 도움 없이 실행할 수 없기 때문에 컴파일러 언어라고 할 수는 없다.
+- 자바스크립트는 명령형, 함수형, 프로토타입 기반 객체지향 프로그래밍을 지원하는 멀티 패러다임 프로그래밍 언어다.
+- 타입을 사전에 정의하지 않는 동적 타이핑 언어
+
+### 컴파일러 언어
+
+- 코드가 실행되기 전 단계인 컴파일 단계에 소스코드 전체를 머신 코드로 변환한 후 실행한다.
+- 실행 파일을 생성한다.
+- 컴파일 단계와 실행 단계가 분리되어 있어 명시적인 컴파일 단계를 거치고, 명시적으로 실행 파일을 실행한다.
+- 실행에 앞서 컴파일은 단 한번 수행된다.
+- 컴파일과 실행 단계가 분리되어 있으므로 코드 실행 속도가 빠르다.
+
+### 인터프리터 언어
+
+- 코드가 실행되는 단계인 런타임에 문 단위로 한 줄씩 중간 코드인 바이트코드로 변환한 후 실행한다.
+- 실행 파일을 생성하지 않는다.
+- 인터프리트와 실행 단계가 분리되어 있지 않고, 한 줄씩 바이트코드로 변환하고 즉시 실행한다.
+- 코드가 실행될 때마다 인터프리트 과정이 반복 수행된다.
+- 인터프리트와 실행 단계가 분리되어 있지 않으므로 코드 실행 속도가 비교적 느리다.
+
+## 스코프란
+
+모든 식별자는 자신이 선언된 위치에 의해 유효한 범위, 즉 다른 코드가 변수 자신을 참조할 수 있는 범위가 결정되는데, 이를 스코프라고 한다.
+
+**식별자가 유효한 범위**
+
+- 자바스크립트 엔진이 식별자를 검색할 때 사용하는 규칙
+- 스코프가 없다면 같은 이름을 갖는 변수는 충돌을 일으키므로 프로그램 전체에서 하나밖에 사용할 수 없다.
+
+### 스코프 체인
+
+- 스코프는 함수의 중첩에 의해 계층적 구조를 갖는다.
+- 스코프가 계층적으로 연결된 것을 스코프 체인이라고 한다.
+- 변수를 참조할 때 JS 엔진은 스코프 체인을 통해 변수를 참조하는 코드의 스코프에서 시작하여 상위 스코프 방향으로 이동하며 선언된 변수를 검색한다.
+
+### 렉시컬 스코프
+
+함수를 어디서 정의했는지에 따라 함수의 상위 스코프를 결정한다. 함수 정의가 평가되는 시점에 상위 스코프가 정적으로 결정되기 때문에 정적 스코프라 부른다. 함수가 호출된 위치는 상위 스코프 결정에 어떠한 영향도 주지 않는다.
+
+## 생성자 함수
+
+new 연산자와 함께 호출하여 인스턴스를 생성하는 함수.
+
+### 객체 리터럴에 의한 객체 생성의 문제점
+
+- 동일한 프로퍼티를 갖는 객체를 여러 개 생성해야 하는 경우 매번 같은 프로퍼티를 기술해야 하기 때문에 비효율적이다.
+- 생성자 함수에 의한 객체 생성 방식은 프로퍼티 구조가 동일한 객체 여러 개를 간편하게 생성할 수 있다.
+
+### 생성자 함수의 인스턴스 생성 과정
+
+생성자 함수의 역할은 인스턴스를 생성하는 것과 생성된 인스턴스를 초기화 하는 것
+
+1. 암묵적으로 빈 객체가 생성되고, this에 빈 객체가 바인딩 된다. 생성자 함수 내부의 this가 생성자 함수가 생성할 인스턴스를 가리키는 이유가 바로 이것이다.
+2. 코드가 한 줄씩 실행되어 this에 바인딩되어 있는 인스턴스를 초기화한다.
+3. 인스턴스가 바인딩된 this가 암묵적으로 반환된다.
+
+<br />
+
+constructor : 함수 선언문, 함수 표현식, 클래스  
+non-constructor : 화살표 함수, 메서드 축약표현
+
+## 프로토타입
+
+객체를 생성할 때, 일반적으로 프로퍼티의 값은 인스턴스마다 다르지만, 메서드는 모든 인스턴스가 동일한 내용의 메서드를 사용하므로 단 하나만 생성하여 모든 인스턴스가 공유해서 사용하는 것이 바람직하다. 모든 인스턴스가 동일한 메서드를 중복 소유하는 것은 메모리를 불필요하게 낭비하고, 인스턴스를 생성할 때마다 메서드를 생성하므로 퍼포먼스에 악영향을 준다.
+자바스크립트에서는 프로토타입을 기반으로 상속을 구현한다.
+
+- 생성자 함수가 생성할 모든 인스턴스가 공통적으로 사용할 프로퍼티나 메서드를 프로토타입에 미리 구현해 두면 인스턴스는 별도의 구현 없이 상위 객체인 프로토타입의 자산을 공유하여 사용할 수 있다.
+- 프로토타입 객체는 생성자 함수가 평가되어 함수 객체를 생성하는 시점에 더불어 생성된다.
+- 프로토타입을 상속받은 하위 객체는 상위 객체의 프로퍼티를 자신의 프로퍼티처럼 자유롭게 사용할 수 있다.
+- 모든 객체는 `[[prototype]]`이라는 내부 슬롯을 가지며, 이 내부슬롯의 값은 프로토타입의 참조다.
+
+### 프로토타입에서 상속을 구현하는 방법
+
+- JS는 객체의 프로퍼티에 접근하려고 할 때 해당 객체에 접근하려는 프로퍼티가 없다면 `[[Prototype]]` 내부 슬롯의 참조를 따라 자신의 부모 역할을 하는 프로토타입의 프로퍼티를 순차적으로 검색한다.
+- 이를 프로토타입 체인이라 한다. 프로토타입 체인은 자바스크립트가 객체지향 프로그래밍의 상속을 구현하는 메커니즘이다.
+
+## this 바인딩
+
+this는 자신이 속한 객체 또는 자신이 생성할 객체를 가리키는 자기 참조 변수  
+this를 통해 자신이 속한 객체 또는 자신이 생성할 인스턴스의 프로퍼티나 메서드를 참조할 수 있다.  
+자바스크립트의 this는 함수가 호출되는 방식에 따라 this에 바인딩될 값이 동적으로 결정된다.
+
+### 일반 함수 this 바인딩
+
+일반 함수로 호출된 모든 함수 내부의 this에는 전역 객체가 바인딩된다.  
+-> 메서드 내에서 정의한 중첩 함수 또는 콜백 함수가 일반 함수로 호출될 때는 this가 전역 객체를 바인딩하는 것은 문제가 있다.
+
+- 중첩 함수나 콜백 함수는 외부 함수를 돕는 헬퍼 함수의 역할을 하는데, 외부 함수인 메서드와 중첩 함수 또는 콜백 함수의 this가 일치하지 않는다.
+- 이를 일치시키기 위해 두 가지 방법이 있다. Function.prototype.bind 메서드를 사용하거나, 화살표 함수를 사용한다.
+
+### 메서드 this 바인딩
+
+메서드로 호출된 함수 내부의 this에는 메서드를 호출한 객체가 바인딩된다.
+
+### 생성자 this 바인딩
+
+생성자 함수 내부의 this에는 생성자 함수가 생성할 인스턴스가 바인딩된다.
+
+### Function.prototype.call/apply/bind this 바인딩
+
+Function.prototype.call/apply/bind 메서드는 첫 번째 인수로 전달한 특정 객체를 호출한 함수의 this에 바인딩한다.
+
+- call/apply 메서드의 대표적인 용도는 arguments 같은 유사 배열 객체에 배열 메서드를 사용하는 경우
+- bind 메서드의 대표적인 용도는 메서드 내부의 중첩 함수나 콜백 함수의 this가 불일치하는 문제를 해결
+
+### 이벤트 핸들러 this 바인딩
+
+이벤트를 바인딩한 DOM 요소를 가라킨다.
+
+화살표 함수로 정의한 이벤트 핸들러 내부의 this는 상위 스코프의 this를 가리킨다. 화살표 함수는 함수 자체의 this 바인딩을 갖지 않는다.
