--- a/_posts/2022-05-19-0516-0522.md
+++ b/_posts/2022-05-19-0516-0522.md
@@ -517,3 +517,155 @@ store.getState();
 하지만 connect 함수를 사용하여 컨테이너 컴포넌트를 만들었을 경우, 해당 컨테이너 컴포넌트의 부모 컴포넌트가 리렌더링될 때 해당 컨테이너 컴포넌트의 props가 바뀌지 않았다면 리렌더링이 자동으로 방지되어 성능이 최적화 된다.
 
 반면 useSelector를 사용하여 리덕스 상태를 조회했을 때는 최적화 작업이 자동으로 이루어지지 않으므로, 성능 최적화를 위해서는 React.memo를 컨테이너 컴포넌트에 사용해 주어야 한다.
+
+<br />
+<br />
+<br />
+
+## 0519
+
+# 해쉬 테이블
+
+## 해쉬 구조
+
+- Hash Table : 키에 데이터를 저장하는 데이터 구조
+  - Key를 통해 바로 데이터를 받아올 수 있으므로, 속도가 획기적으로 빨라짐
+  - 보통 배열로 미리 Hash Table 사이즈만큼 생성 후에 사용 (공간과 탐색 시간을 밪바꾸는 기법)
+- 해쉬 : 임의 값을 고정 길이의 문자열로 변환하는 것
+- 해싱 함수 : Key에 대해 산술 연산을 이용해 데이터 위치를 찾을 수 있는 함수
+- 해쉬 값 또는 해쉬 주소 : Key를 해싱 함수로 연산해서 얻은 값
+- 슬롯 or 버킷 : 한 개의 데이터를 저장할 수 있는 공간
+
+### 해쉬 테이블의 장단점과 주요 용도
+
+- 장점
+  - 데이터 저장/읽기 속도가 빠르다. (검색 속도가 빠르다.)
+  - 해쉬는 키에 데이터가 있는지(중복) 확인이 쉽다.
+- 단점
+  - 일반적으로 저장 공간이 좀 더 많이 필요하다.
+  - 여러 키에 해당하는 주소가 동일할 경우 충돌을 해결하기 위한 별도 자료구조가 필요
+- 주요 용도
+  - 검색이 많이 필요한 경우
+  - 저장, 삭제, 읽기가 빈번한 경우
+  - 캐쉬 구현시
+
+## 충돌(Collision) 해결 알고리즘
+
+- 해쉬 테이블의 가장 큰 문제는 충돌의 경우이다.
+- 해시 함수는 입력값의 길이가 어떻든 고정된 길이의 값을 출력하기 때문에 입력값이 다르더라도 같은 결과값이 나오는 경우가 있다. 이것을 해시 충돌이라고 표현하며, 충돌이 적은 해시 함수가 좋은 해시함수다.
+- 적재율이란 해시 테이블의 크기에 대한 키의 개수의 비율을 뜻한다. 키의 개수를 K, 해시 테이블의 크기를 N이라고 했을 때 적재율은 K/N이다.
+
+### seperate Chaining 기법
+
+- 해쉬 테이블 저장공간 외의 공간을 활용하는 기법으로 한 버킷 당 들어갈 수 있는 엔트리의 수에 제한을 두지 않는다.
+- 충돌이 일어나면, 링크드 리스트나 트리를 사용해서 데이터를 추가로 뒤에 연결시켜서 저장하는 기법
+- 해시 충돌이 일어나더라도 링크드 리스트로 노드가 연결되기 때문에 index가 변하지 않고 데이터 개수의 제약이 없다는 장점이 있다.
+- 하지만 메모리 문제를 야기하여, 테이블의 부하율에 따라 선형적으로 성능이 저하된다. 따라서 부하율이 작을 경우에는 open addressing 방식이 빠르다.
+
+### Open addressing
+
+- 버킷 당 들어갈 수 있는 엔트리는 하나이지만, 다른 주소에 데이터를 저장할 수 있도록 허용하는 방법
+- 부하율이 높을수록(테이블에 저장된 데이터의 밀도가 높을수록) 성능이 급격히 저하된다.
+- Linear Probing은 선형으로 순차적 탐색을 해서 다음 slot을 찾는 방법이다. 해시 함수로 나온 값에 이미 다른 값이 저장되어 있다면, 해당 해시값에서 고정 폭을 옮겨 다음 해시값에 해당하는 버킷에 액세스한다.
+- 해시 충돌이 해시 값 전체에 균등하게 발생할 때 유용한 방법이다.
+
+### 빈번한 충돌을 개선하는 방법
+
+1. 해쉬 함수를 재정의
+2. 해쉬 테이블 저장공간을 확대
+
+### 리사이징
+
+Seperate changing의 경우, 버킷이 일정 수준으로 차 버리면 각 버킷에 연결되어 있는 리스트의 길이가 늘어나기 때문에, 성능이 떨어져 버킷의 개수를 늘려줘야 한다. 또한 Open addressing의 경우, 고정 크기 배열을 사용하기 때문에 데이터를 더 넣기 위해서는 배열을 확장해야 한다.
+
+보통 두 배로 확장하는데, 확장하는 임계점은 현재 데이터 개수가 해시 버킷의 개수의 75%가 될 때이다.
+
+### 해쉬 함수와 키 생성 함수
+
+- 유명한 해쉬 함수들이 있는데 제일 대표적으로 SHA 함수가 있다.
+- 어떤 데이터도 유일한 고정된 크기의 고정값을 리턴해주므로, 해쉬 함수로 유용하게 활용 가능하다.
+
+### 시간 복잡도
+
+- 일반적인 경우(충돌이 없는 경우)는 O(1)
+- 최악의 경우(충돌이 모두 발생하는 경우)는 O(n)
+- 해쉬 테이블의 경우, 일반적인 경우를 기대하고 만들기 때문에, 시간 복잡도는 O(1)이라고 말할 수 있다.
+- 검색에서 16개의 배열에 데이터를 저장하고, 검색하면 O(n)
+- 16개의 데이터 저장공간을 가진 해쉬 테이블에 데이터를 저장하고, 검색할 때 O(1)
+
+## JS에서의 해시 테이블
+
+### JS의 object는 해시 테이블일까?
+
+정확히 말하면 JS의 객체는 해시 테이블이 아니다.  
+V8 엔진을 포함한 대부분의 JS 엔진은 해시 테이블과 유사하지만 높은 성능을 위해 일반적인 해시 테이블보다 나은 방법으로 객체를 구현한다.
+
+JS는 클래스 없이 객체를 생성할 수 있으며, 객체가 생성된 이후라도 동적으로 프로퍼티와 메서드를 추가할 수 있다.  
+이는 사용하기 편리하지만 성능 면에서는 클래스 기반 객체보다 생성과 프로퍼티 접근에 비용이 더 많이 드는 비효율적인 방식이다.  
+따라서 V8 자바스크립트 엔진에서는 프로퍼티에 접근하기 위해 히든 클래스라는 방식을 사용해 C++ 객체의 프로퍼티에 접근하는 정도의 성능을 보장한다.
+
+히든 클래스는 자바와 같이 고정된 객체 레이아웃(클래스)과 유사하게 동작한다.
+
+### JS로 해시 테이블 구현하기
+
+```javascript
+class HashTable {
+  constructor(size) {
+    this.data = new Array(size);
+  }
+
+  _hash(key) {
+    let hash = 0;
+    for (let i = 0; i < key.length; i++) {
+      hash = (hash + key.charCodeAt(i) * i) % this.data.length;
+    }
+
+    return hash;
+  }
+
+  set(key, value) {
+    const address = this._hash(key);
+
+    if (!this.data[address]) {
+      this.data[address] = [];
+    }
+
+    // If there is already a data in the address, push it in the same array.
+    // This will happen in case of hash collision (enough data, less memory space).
+    this.data[address].push([key, value]); // Time complexity = O(1)
+    return this.data;
+  }
+
+  get(key) {
+    const address = this._hash(key);
+    const currentBucket = this.data[address];
+
+    // In case of hash collision this will have length more than 1.
+    if (currentBucket) {
+      // Time Complexity = O(1) most often. In worst case (hash collision) it will be O(n)
+      for (let i = 0; i < currentBucket.length; i++) {
+        if (currentBucket[i][0] === key) {
+          return currentBucket[i][1];
+        }
+      }
+    }
+  }
+}
+
+const myHashTable = new HashTable(50);
+myHashTable.set("has_garden", true);
+console.log(myHashTable.get("has_garden")); // true
+
+myHashTable.set("house_number", 54);
+console.log(myHashTable.get("house_number")); // 54
+
+myHashTable.set("street_name", "Main Street");
+console.log(myHashTable.get("street_name")); // 'Main Street'
+```
+
+<br />
+<br />
+
+**reference**  
+[Hash Table Implementation in JavaScript · GitHub](https://gist.github.com/darshna09/8acffa59e92b01b7aa8a1d8a0352f956)  
+[자료구조 | 해시 테이블 hash table](https://velog.io/@edie_ko/hashtable-with-js#%EC%9E%90%EB%B0%94%EC%8A%A4%ED%81%AC%EB%A6%BD%ED%8A%B8%EC%9D%98-object%EB%8A%94-%ED%95%B4%EC%8B%9C-%ED%85%8C%EC%9D%B4%EB%B8%94%EC%9D%BC%EA%B9%8C)
