--- a/_posts/2022-06-02-0530-0605.md
+++ b/_posts/2022-06-02-0530-0605.md
@@ -4,3 +4,28 @@ tag: TIL
 category: TIL
 excerpt: ""
 ---
+
+## 0601
+
+# A 스타트업 면접 후기
+
+2월에 카카오 1, 2차 면접 이후 정말 오랜만에 면접을 볼 기회가 생겼다.  
+다른 점이 있다면 카카오 면접은 화상으로 진행했다면 이번 면접은 직접 가서 대면으로 진행하였다.  
+정말 오랜만의 면접이라 말하는 연습 위주로 준비했다.  
+오랜만에 보는 JS 기본 개념과 React, Web, CS, 이력서와 프로젝트를 입 밖으로 꺼내려니 처음에는 잘 되지 않았지만, 처음 연습했을 때에 비해서는 빠르게 익숙해졌다.
+
+후기를 찾아보니 기술 면접은 진행했던 사전 과제와 이력서를 기반으로 나온다는 이야기를 듣고, 이 두 가지도 잘 준비했다.  
+건물에 도착해서 들어가게 된 회사의 첫 분위기는 생각보다 사람이 많고 회사가 넓다는 인상을 주었다.  
+채용 과정 내내 회사에서 지원자들에게 좋은 경험을 주기 위해 노력하고 있다는 느낌을 받았다.
+
+덕분에 초반에 있었던 긴장감은 모두 풀린 채 면접을 진행할 수 있었다.  
+좋았던 부분이자 다른 면접과 좀 다르다고 느꼈던 부분 중 하나는 면접의 시작을 자기소개로 하지 않는다는 것이었다.  
+대부분의 모의 면접이나 실제 면접, 그리고 주변 사람들이 면접 후기를 남길 때 정해진 것처럼 1분 가량의 자기소개를 하고 시작했던 것에 반해 이 곳에서는 바로 사전 과제를 화면에 띄우고 면접을 진행했다.  
+많은 사람들의 역량을 검증해야 하는 회사들에서는 일반적으로 지원자가 준비한 자기소개를 듣는 것이 이해가 되긴 하지만, 자기소개 만큼은 준비하고 암기해서 말해야 한다는 느낌이 강해서 나는 그닥 좋아하지 않았다.  
+하지만 이번 회사에서는 형식적인 자기소개를 스킵하고, 아이스 브레이킹과 자연스레 면접이 진행되어 그 부분이 좋았다.
+
+면접은 사전과제와 관련된 질문 30분, 이력서 기반 20분 정도로 진행하였고, 기술을 깊게 물어보기보다는 내 생각이나 문제에 어떻게 접근하는 지를 본다는 느낌을 받았다.  
+문제에 대한 접근법과 생각을 준비한 기술 답변과 엮어서 어필하기 위해 노력했던 것 같다.  
+면접이 진행되는 동안 면접관들과 의사소통이 활발하게 이루어진다는 느낌을 받았고, 거의 모든 질문에 막힘없이 대답했기에 기분좋게 면접을 마무리지을 수 있었던 것 같다.
+
+지금까지 준비해왔던 것들에 비해서는 생각보다 쉽게 느껴져서, 모든 역량을 보여주지 못한 아쉬움이 남기는 했지만 그래도 첫 대면 면접을 기분 좋게 마무리 할 수 있어서 좋은 경험이었다고 생각한다.
